docs: 오탈자 수정

--- a/정답 구하기.md
+++ b/정답 구하기.md
@@ -28,7 +28,7 @@
 
 정답처럼 보이는 것을 쫒아 여러가지를 시도해보아도 좋다. 여러 사람에게 물어봐도 좋다. 다만, 방향은 잃어서는 안 된다. 우린 정답을 찾는 것이 아닌, 정답을 만들기 위해 물어야 한다. 내가 무엇을 중요하게 여기는 지, 어떤 습관이 있는지, 나는 어떤 사람인지. 그래서 내가 생각한 정답은 무엇인지.
 
-이 코드가, 설계가 내 것이기 위해서는 내 생각이 들어가야 한다. 그래야 내 선택이고 내 것이 된다. 누군가가 왜 이렇게 생각했나요? 물었을 때 그 가 허접하기 짝이 없고, 남들에 비해 보잘 것 없어도 내 생각이고 논리면 나의 답이 된다. 답이 틀렸다고 하여도 답이 없는 것보다는 좋다. 언젠가는 남들도 인정할 내 답이 될 초석이 될 것이기 때문에.
+이 코드가, 설계가 내 것이기 위해서는 내 생각이 들어가야 한다. 그래야 내 선택이고 내 것이 된다. 누군가가 왜 이렇게 생각했나요? 물었을 때 그 이유가 허접하기 짝이 없고, 남들에 비해 보잘 것 없어도 내 생각이고 논리면 나의 답이 된다. 답이 틀린 것 같다고 하여도 답이 없는 것보다는 좋다. 잘못된 답이더라도 언젠가는 남들도 인정할 내 답이 될 초석이 될 것이기 때문에.
 
 <br>
 
@@ -36,4 +36,4 @@
 
 불확실성이 싫었다. 불안했고 어려웠다. 여전히 불안하고 어렵지만 그래도 이제는 괜찮다. 정답이 없는 세상에서 정답을 찾으려 노력하고, 정답인지 아닌지 불안에 떠는 것은 그만두기로 했다. 여전히 그 습관을 버리지 못하고 남들이 정답이라고 외치는 것에 홀려 따라하게 될지도 모르지만, 그래도 그만두려고 노력해보려고 한다. 대신 내 생각이 왜 정답인지를 만들어보려고 한다. 듣다보면 동의하게 되는, 납득가는 이유가 있는 정답을.
 
-인생은 불확실성의 연속이다. 그 불확실성 속에서 우린 선택을 하고, 그건 옳을지도 틀릴지도 모른다. 그치만 그저 남의 가치관을 따라, 세상의 관습에 따라 선택을 하며 세상이 말하는 성공에 도달한다면 그것은 정답일까? 그것은 껍데기에 불과할 것이다. 세상이 변하여 성공의 기준이 바뀐다면 의미가 없어질 껍데기말이다. 코드의 주인이 코드의 이유를 아는 것처럼 우리가 삶의 주인이 되기 위해선 선택의 이유를 알아야 한다. 이유를 안다면 그건 틀린 선택이어도 괜찮다. 그저 다시 리팩토링 하면 되기 때문이다.
+인생은 불확실성의 연속이다. 그 불확실성 속에서 우린 선택을 하고, 그건 옳을지도 틀릴지도 모른다. 그치만 그저 남의 가치관을 따라, 세상의 관습에 따라 선택을 해 세상이 말하는 성공에 도달한다면 그것은 정답일까? 그것은 껍데기에 불과할 것이다. 세상이 변하여 성공의 기준이 바뀐다면 의미가 없어질 껍데기말이다. 우린 우리의 선택을 해야 한다. 그리고 코드의 주인이 코드의 이유를 아는 것처럼 우리가 삶의 주인이 되기 위해선 선택의 이유를 알아야 한다. 이유를 안다면 그건 틀린 선택이어도 괜찮다. 그저 다시 리팩토링 하면 되기 때문이다.
