--- a/정답 구하기.md
+++ b/정답 구하기.md
@@ -1,39 +1,41 @@
-# 정답 구하기
+# 정답 만들기
 
 ## 불확실성 속 선택
 
-한 게임이 있다. 선택지에 따라 엔딩이 달라진다. 사물함을 열어 보는 지 여부에 따라 결말이 달라지고, 청소를 하느냐에 따라 또 결말이 달라진다. 여러가지 엔딩을 보기 위해서는 저장된 게임 데이터로 돌아가 다른 선택을 해보는 방법이 있다. 아니면 남들이 해보고 알려주는 게임의 공략법을 구해볼 수도 있다. 그럼 우린 게임의 터닝포인트가 무엇인지 알 수 있다. 그렇게 몇 번이나 플레이하며 게임의 결말은 해피엔딩이거나 세드엔딩으로, 히든엔딩을 맞이한다.
+한 게임이 있다. 선택지에 따라 엔딩이 달라진다. 사물함을 열어 보는 지 여부에 따라 결말이 달라지고, 청소를 하느냐에 따라 또 결말이 달라진다. 여러가지 엔딩을 보기 위해서는 저장된 게임 데이터로 돌아가 다른 선택을 해보는 방법이 있다. 아니면 남들이 해보고 알려주는 게임의 공략법을 구해볼 수도 있다. 그럼 우린 게임의 터닝포인트가 무엇인지 알 수 있다. 그렇게 몇 번이나 플레이하며 게임의 결말은 해피엔딩이거나 세드엔딩을, 히든엔딩을 맞이한다.
 
-인생은 이런 게임과 비슷하다. 무수히 많은 선택지 중 하나를 선택하며 살아간다. 오늘 먹을 저녁 메뉴나 입을 옷처럼 사소한 것일 수도 있고, 직업이나 결혼 상대 같은 중대한 것일 수도 있다. 그치만 게임과 달리 선택이 가지는 사소함과 중대함을, 선택이 불러올 각각의 결과를 우린 알 수 없다. 우린 다시 돌아갈 수 없기 때문이다. 오늘 밤 가볍게 나간 친구모임에서 미래의 내 결혼 상대를 만나게 될 지, 무심코 지원한 회사에서 20년을 근속할 지 그것은 아무도 모르는 것이기 때문이다. 그때 어떤 선택을 했다면 더 행복했을거라고, 더 성공했을 거라고 장담할 수 없다.
+인생은 이런 게임과 비슷하다. 무수히 많은 선택지 중 하나를 선택하며 살아간다. 오늘 먹을 저녁 메뉴나 입을 옷처럼 사소한 것일 수도 있고, 직업이나 결혼 상대 같은 중대한 것일 수도 있다. 그치만 게임과 달리 선택이 가지는 사소함과 중대함을, 선택이 불러올 각각의 결과를 우린 알 수 없다. 우린 다시 돌아갈 수 없기 때문이다. 오늘 밤 가볍게 나간 친구모임에서 미래의 내 결혼 상대를 만나게 될 지, 무심코 지원한 회사에서 20년을 근속할 지 그것은 아무도 모른다. 때문에 그때 그 선택을 했다면 더 행복했을거라고, 더 성공했을 거라고 장담할 수도 없다.
 
-어렸던 나는 확실함을 쫒았다. 고등학생일 때 나는 성인이 된 나를 상상하며 보다 확실한 정답을 알고 선택할 수 있는 사람일 것이라고 생각했다. 친구랑 갈등이 있을 때 어떻게 해야 하는지 아는 사람이 될 것이라 상상했고, 고민이 있을 때 좋은 것인지 판단하는 능력이 생길 것이라고 생각했었다.
+어렸던 나는 확실함을 쫓았다. 고등학생이던 나는 성인이 된 나를 상상하며 보다 확실한 정답을 알고 선택할 수 있는 사람일 것이라고 생각했다. 친구랑 갈등이 있을 때 어떻게 해야 하는 지 아는 사람이 될 것이라 상상했고, 고민이 있을 때 어떤 선택지가 좋은 것인지 판단하는 능력을 가질 것이라고 생각했었다.
 
-그리고 그런 생각을 한 지 10년 뒤인 지금 나는 어떤가. 여전히 내가 어떤 사람인지조차 확신하지 못한 채 불확실성이 가득한 세상 안에서 살며, 가끔은 그 안에서 불안과 부담을 느끼며 살고 있다. 나는 내가 퇴사를 하게 될지도 몰랐고, 전공과는 전혀 다른 분야를 배울지도 몰랐다.
+그리고 그런 생각을 한 지 10년 뒤인 지금 나는 어떤가. 여전히 내가 어떤 사람인지조차 확신하지 못한다. 나는 내가 퇴사를 하게 될지도 몰랐고, 전공과는 전혀 다른 분야를 배울지도 몰랐다. 여전히 불확실성이 가득한 세상 안에서 살며, 가끔 불안과 부담을 느끼며 살고 있다.
 
-지금의 나는 10년 뒤 30대 중반을 넘어섰을 내가 어떤 직업을 가지고 있을지, 결혼은 했을지, 삶에 만족하고 살고 있을지도 모르겠다. 알 수 있는 것이라곤 미래의 나 역시도 지금의 나처럼 아무것도 확신하지 못하고 살 것이라는 답 뿐이다.
+지금의 나는 10년 뒤 30대 중반을 넘어섰을 내가 어떤 직업을 가지고 있을 지, 결혼은 했을 지, 삶에 만족하고 살고 있을 지도 모르겠다. 알 수 있는 것이라곤 미래의 나 역시도 지금의 나처럼 아무것도 확신하지 못하고 살 것이라는 답 뿐이다.
 
 <br>
 
 ## 개발과 인생의 동질성
 
-삶에는 게임과 달리 정답은 없다. 이제는 아는 사실이다. 지금 우리가 믿고 사는 진리도 나중엔 진리가 아닐 수 있다. 머언 과거 신분제가 당연했던 사회에서 평등사회가 된 것처럼. 그렇다면 삶을 어떻게 살아가야 하는 걸까?
+삶에는 게임과 달리 정답이 없다. 이제는 아는 사실이다. 지금 우리가 믿고 사는 당연한 진리도 나중엔 진리가 아닐 수 있다. 머언 과거 신분제가 당연했던 사회에서 평등사회가 된 것처럼 말이다. 그렇다면 삶을 어떻게 살아가야 하는 걸까?
 
 그 답을 개발을 배우며 다시금 깨닫고 있다.
 
-정답에 가까운 길은 있을테다. 다른 사람이 보기에 코드가 근사하면 좋을 테고, 깔끔하게 군더더기 없다면 좋을테다. 재활용성이 높으면 좋을 테고, 다양한 기능을 가지고 있으면 좋을 것이다. 요즘 유행하는 패러다임을 반영하여 다른 사람들의 관심을 얻어도 좋을 테고, 적은 메모리 공간, 빠른 속도를 겸비하면 무척이나 좋을 테다.
+정답에 가까운 길은 있을테다. 다른 사람이 보기에 코드가 근사하면 좋을 테고, 깔끔하게 군더더기 없다면 좋을테다. 재활용성이 높으면 좋을 테고, 다양한 기능을 가지고 있으면 좋을 것이다. 요즘 유행하는 패러다임을 반영하여 다른 사람들의 찬사를 얻어도 좋을 테고, 적은 메모리 공간, 빠른 속도를 겸비하면 무척이나 좋을 테다.
 
-그치만 위를 다 충족해야지 정답은 아니다. 위 사항들을 가지지 못했다고 하여 오답도 아니다. 빠른 시일 내에 기능구현을 목표로 하는 코드에는 위 사항을 지키지 않더라도 굴러가기만 한다면 그게 정답일 것이고, 그 누구에게도 보여주지 않고 혼자 모든 코드를 짠다면 본인만 알아보게 작성을 해도 상관없을 것이다. 누군가에게 메커니즘을 설명하기 위해 하나의 함수를 여러 코드로 굳이 나누어 보여주는 것에도 의미가 있을테고, 더 복잡한 기능을 만들기 위한 초석으로 사사로운 기능들 하나하나 연습하는 것 역시 의미가 있을 것이다.
+그치만 위를 다 충족해야지 정답은 아니다. 위 사항들을 가지지 못했다고 하여 오답도 아니다. 빠른 시일 내에 기능구현을 목표인 경우에는 위 사항을 지키지 않더라도 굴러가기만 한다면 빠르게 만드는 것이 정답이다. 그 누구에게도 보여주지 않고 혼자 모든 코드를 짠다면 본인만 알아보게 작성을 해도 상관없을 것이다. 누군가에게 메커니즘을 설명하기 위해 하나의 함수를 여러 코드로 굳이 나누어 보여주는 것에도 의미가 있을테다.
 
 코치님들은 늘 말한다. 정답은 없다고. 다만, 자신만의 철학으로 선택할 것. 생각이 묻어날 것.
 
 정답처럼 보이는 것을 쫒아 여러가지를 시도해보아도 좋다. 여러 사람에게 물어봐도 좋다. 다만, 방향은 잃어서는 안 된다. 우린 정답을 찾는 것이 아닌, 정답을 만들기 위해 물어야 한다. 내가 무엇을 중요하게 여기는 지, 어떤 습관이 있는지, 나는 어떤 사람인지. 그래서 내가 생각한 정답은 무엇인지.
 
-이 코드가, 설계가 내 것이기 위해서는 내 생각이 들어가야 한다. 그래야 내 선택이고 내 것이 된다. 누군가가 왜 이렇게 생각했나요? 물었을 때 그 이유가 허접하기 짝이 없고, 남들에 비해 보잘 것 없어도 내 생각이고 논리면 나의 답이 된다. 답이 틀린 것 같다고 하여도 답이 없는 것보다는 좋다. 잘못된 답이더라도 언젠가는 남들도 인정할 내 답이 될 초석이 될 것이기 때문에.
+이 코드가, 설계가 내 것이기 위해서는 내 생각이 들어가야 한다. 그래야 내 선택이고 내 것이 된다. 누군가가 왜 이렇게 생각했나요? 물었을 때 그 이유가 허접하기 짝이 없고, 남들에 비해 보잘 것 없어도 내 생각이고 논리면 나의 답이 된다. 답이 틀린 것 같다고 하여도 답이 없는 것보다는 좋다. 잘못된 답이더라도 언젠가는 남들도 인정할 내 답의 초석이 될 것이기 때문에.
 
 <br>
 
 ## 살아가는 방법
 
+인생은 불확실성의 연속이다. 그 불확실성 속에서 우린 선택을 하고, 그건 옳을지도 틀릴지도 모른다. 그치만 그저 남의 가치관을 따라, 세상의 관습에 따라 선택을 해 세상이 말하는 성공에 도달한다면 그것은 정답일까? 그것은 껍데기에 불과할 것이다. 세상이 변하여 성공의 기준이 바뀐다면 나에게마저 의미가 없어질 껍데기말이다.
+
 불확실성이 싫었다. 불안했고 어려웠다. 여전히 불안하고 어렵지만 그래도 이제는 괜찮다. 정답이 없는 세상에서 정답을 찾으려 노력하고, 정답인지 아닌지 불안에 떠는 것은 그만두기로 했다. 여전히 그 습관을 버리지 못하고 남들이 정답이라고 외치는 것에 홀려 따라하게 될지도 모르지만, 그래도 그만두려고 노력해보려고 한다. 대신 내 생각이 왜 정답인지를 만들어보려고 한다. 듣다보면 동의하게 되는, 납득가는 이유가 있는 정답을.
 
-인생은 불확실성의 연속이다. 그 불확실성 속에서 우린 선택을 하고, 그건 옳을지도 틀릴지도 모른다. 그치만 그저 남의 가치관을 따라, 세상의 관습에 따라 선택을 해 세상이 말하는 성공에 도달한다면 그것은 정답일까? 그것은 껍데기에 불과할 것이다. 세상이 변하여 성공의 기준이 바뀐다면 의미가 없어질 껍데기말이다. 우린 우리의 선택을 해야 한다. 그리고 코드의 주인이 코드의 이유를 아는 것처럼 우리가 삶의 주인이 되기 위해선 선택의 이유를 알아야 한다. 이유를 안다면 그건 틀린 선택이어도 괜찮다. 그저 다시 리팩토링 하면 되기 때문이다.
+우린 우리의 선택을 해야 한다. 그리고 우리가 삶의 주인이 되기 위해선 코드의 주인이 코드의 이유를 아는 것처럼 선택의 이유를 알아야 한다. 이유를 안다면 그건 틀린 선택이어도 괜찮다. 그저 틀린 이유를 알았을 때 리팩토링-픽스-하면 되기 때문이다.
