--- a/레벨1-기록/우아한테크코스 한 달 생활기.md
+++ b/레벨1-기록/우아한테크코스 한 달 생활기.md
@@ -2,18 +2,20 @@
 
 서울시 모 구청의 8급 공무원이었다. 2020년 2월 3일 신규 발령을 받았고 2022년 1월 17일 승진도 했다. 하지만 엄청난 기쁨도 감흥도 없었다.
 
-2022년 12월 8일 팀장님께 면직 의사를 밝혔다. 고민은 길었지만, 2023년 1월 2일 약 3년간의 짧은 공직 생활은 생각보다 쉽게 끝이 났다. 짧은 기간이었지만 많은 경험을 했고 또 다른 성장을 할 수 있었다. 코로나가 한창일 때는 주말에도 매일 2번씩 관내 확진자에게 전화해 몸 상태는 어떤지, 집 밖으로 나가진 않았는지 확인했다. 거리두기 4단계일 때는 저녁에 관내 노래방, PC방 등을 다니며 마스크 쓰기, 한 칸 띄어 앉기, 운영시간 제한 등은 잘 지키고 있는지 점검도 다녔다. 눈이 많이 오는 날에는 다 같이 눈을 쓸러 나가기도 했고 대통령 선거, 국회의원 선거 등 선거가 있는 해에는 투표 마지막 날 저녁부터 다음 날 새벽까지 투표지분류기 운영요원으로 근무하기도 했다. 평소에도 직원 및 민원인들과 매일 30통 이상의 전화를 주고받으면서 공포스럽던 전화벨 소리에도 익숙해졌다. 골목 가로등이 꺼져있는데 어디에 말하면 되냐고 물어보던 친구에게 120에 문자를 보내면 된다고 답해줄 수 있었고 유용한 정보가 구청 홈페이지에 올라오면 주변에 알려줄 수 있었다. 동 주민 센터 직원 등 민원인을 상대하는 사람들에게 더 공감하고 친절해질 수 있었다.
+2022년 12월 8일 팀장님께 면직 의사를 밝혔다. 고민은 길었지만, 2023년 1월 2일 약 3년간의 짧은 공직 생활은 생각보다 쉽게 끝이 났다. 짧은 기간이었지만 많은 경험을 했고 또 다른 성장을 할 수 있었다. 코로나가 한창일 때는 주말에도 매일 2번씩 관내 확진자에게 전화해 몸 상태는 어떤지, 집 밖으로 나가진 않았는지 확인했다. 거리두기 4단계일 때는 저녁에 관내 노래방, PC방 등을 다니며 마스크 쓰기, 한 칸 띄어 앉기, 운영시간 제한 등은 잘 지키고 있는지 점검도 다녔다. 눈이 많이 오는 날에는 다 같이 눈을 쓸러 나가기도 했고 대통령 선거, 국회의원 선거 등 선거가 있는 해에는 투표 마지막 날 저녁부터 다음 날 새벽까지 투표지분류기 운영요원으로 근무하기도 했다. 평소에도 직원 및 민원인들과 매일 30통 이상의 전화를 주고받으면서 공포스럽던 전화벨 소리에도 익숙해졌다. 골목 가로등이 꺼져있는데 어디에 말하면 되냐고 물어보던 친구에게 120에 문자를 보내면 된다고 답해줄 수 있었고 유용한 정보가 구청 홈페이지에 올라오면 주변에 알려줄 수 있었다. 또한 식당 직원, 동 주민 센터 직원 등 사람을 상대하는 일을 하는 이들에게 더욱 공감했고 친절해질 수 있었다.
 
-하지만 나는 항상 삶의 의미를 찾았고 어떻게 살아야 즐겁게 살 수 있는지 고민했다. 친구들은 일하면서 자아실현 할 수 없고 삶의 의미도 찾지 말라고 했지만, 나에게 일은 살아감에 있어서 아주 중요한 부분이었다. 하루 중 대부분의 시간을 사무실에 앉아 보내면서 깨달았던 것이다. 이렇게 살다가 정년퇴직하면 '이 정도면 잘 살았다'라고 만족할 수 있을지 생각해보았다. 대답은 물론 '아니다'였다. 2년 넘게 지속했던 고민의 답을 찾았다.
+하지만 나는 항상 삶의 의미를 찾았고 어떻게 살아야 즐겁게 살 수 있는지 고민했다. 친구들은 일하면서 자아실현 할 수 없고 삶의 의미도 찾지 말라고 했지만, 나에게 일은 살아감에 있어서 아주 중요한 부분이었다. 하루 중 대부분의 시간을 사무실에 앉아 보내면서 깨달았던 것이다.
 
-컴퓨터공학을 전공했다. 더 잘하고 재능있는 친구들과 비교했고 도망쳤다. 안정적인 직장을 얻었고 이 이야기의 끝은 행복한 삶이 시작되는 해피엔딩인 줄 알았으나 그것은 또 다른 고민의 시작이었다. 그래서 돌고 돌아 우아한테크코스 프리코스에 참여하게 되었다.
+이렇게 살다가 정년퇴직하면 '이 정도면 잘 살았다'라고 만족할 수 있을지 생각해보았다. 대답은 물론 '아니다'였다. 2년 넘게 지속했던 고민의 답을 찾았다.
+
+컴퓨터공학을 전공했다. 더 잘하고 재능있는 친구들과 비교했고 도망쳤다. 안정적인 직장을 얻었고 이 이야기의 끝은 "행복하게 살았습니다"라고 하는 해피엔딩인 줄 알았으나 그것은 또 다른 고민의 시작이었다. 그래서 돌고 돌아 우아한테크코스 프리코스에 참여하게 되었다.
 
 > 하루는 오전 5시 반에 눈이 떠졌는데 오후 11시까지 정말 밥만 먹고 코딩만 했던 것 같습니다. 신기하게도 몰입을 하니, 눈이 침침해지고 피곤하긴 했지만 잠이 오지도 않았고 배도 고프지 않았습니다. 그리고 뭔가 제 자신이 멋지다고 생각했습니다.
 > \- 프리코스 2주 차 숫자 야구 미션 회고록 중 -
 
 몰입하는 스스로가 멋지다고 생각했고 몰입하는 경험 자체가 정말 즐겁고 좋았던 것 같다. 프리코스 3주 차 로또 미션에서는 작성한 코드를 보며 '이만하면 잘 짠 것 같은데?'라는 생각도 했었다. 지금 생각해보면 이때는 포비가 말했던 더닝크루거 곡선 중 우매함의 봉우리 단계(아는 게 없음, 자신감 높음)였던 것 같다.
 
-> 우매함의 봉우리 ⤵ 절망의 계곡 ⤴ 깨달음의 오르막 → 지속가능성의 고원
+> 우매함의 봉우리 ⤵ 절망의 계곡 ⤴ 깨달음의 오르막 ➡️ 지속가능성의 고원
 
 어찌 되었든 간에 프리코스 과정은 나에게 확신을 주었고 '우아한테크코스에 선발되지 못하더라도 개발자가 되어야겠다'고 결정했기에 최종 발표가 나오기 전 인사팀에 사직원을 제출했다. 그리고 정말 다행히도 우아한테크코스에 합류하게 되었다.
 
