--- a/깃짱의한달생활기.md
+++ b/깃짱의한달생활기.md
@@ -1,6 +1,10 @@
+### 인트로
+
 다들 시간이 빠르게 지나갔다고 하지만, 나에게 시간은 나름 정속으로 갔다. 
 특히나 계속 기록하는 습관이 있다 보니, 매일 일기를 최고 네 줄씩 작성하는데, 한 달 전과 정말 많이 발전했다는 생각이 든다. 
 집에서 설렁설렁 개발 공부하던 때보다 매일 일정한 시간에 공부하다 보니, 주변 환경이 왜 중요하다 하는지 알 수 있었다.
+
+### 중요도 선정중...
 
 내가 얼마만큼 해야 하는지에 대한 고찰을 했던 한 달이었다. 
 나는 체력이 좋은 편도 아니고, 엉덩이는 상당히 가벼운 편이다. 
@@ -12,12 +16,16 @@
 포비는 장난 20% 진담 80%로 연애도 하지 않는 것을 권했지만, 나는 놀고 싶은 것도 많고, 취미도 너무 중요하다. 
 일주일에 세 번 복싱장에 가야 하고, 가족과 노는 시간도 중요하며 강아지들을 책임감 있게 산책도 시켜야 해서, 시간을 어떻게 사용해야 될지에 대해서 고민을 많이 하게 되었다.
 
+### 컨디션 관리
+
 어떻게 해야 가장 잘 학습할 수 있을까? 
 나는 1순위가 컨디션 관리다. 
 나는 학습 시간이 어느 정도 이상 길어지면 오히려 학습 총량은 줄어드는 느낌을 받을 때가 있다. 머리를 많이 써야 하는 일이다 보니, 잘 자고 잘 먹지 않으면 골치 아픈 일 앞에서 회피하게 된다. 
 항상 좋은 컨디션을 유지해서 도전적인 자세로 학습하려면 따라서 학습 시간이 어느 정도 선을 넘어서는 안 된다는 것을 고등학생 때 깨달았다.
 주위에 시간을 열정의 기준으로 삼는 사람들을 쉽게 찾아볼 수 있지만, 나는 나만의 기준을 가지려고 하고 있다. 
 기준은 바로바로 진심으로 피하지 않고 고민했는가이다. 
+
+### 취미는 얼마나?
 
 그렇다면 취미는 얼마나 즐겨야 할까? 
 체력에 무리가 가지 않되, 내가 너무 공부만 했다는 생각에 우울하지 않을 정도로 즐기기로 했다. 실제로 우테코 한 달 동안, 친구도 많이 만나고 복싱장은 수십 번 갔으며, 주말에는 여행도 다녀오기도 했다. 
@@ -37,4 +45,3 @@
 나 자신에 대한 평가는 절대평가로 갈 텐데, 내 눈에 지난 미션보다 나아졌다면 통과로 하기로 했다. 
 우테코는 모두가 같은 미션에 대한 코드를 작성하다 보니 비교하기가 쉽다. 
 나는 프리 코스 첫날 자바를 시작한 만큼 백엔드에서 자바 경력이 가장 짧으니 좀 더 열심히 노력해 겠다! 
-
