--- a/우아한테크코스 한 달 생활기.md
+++ b/우아한테크코스 한 달 생활기.md
@@ -16,8 +16,8 @@
 #### 새로운 경험
 
 한 달동안의 생활은 새로운 경험의 연속이었다. 우선 정말 오랜만에 루틴이 있는 삶을 살았다. 출퇴근 시간이 생겼고, 평일과 주말, 공휴일을 구분할 수 있었다.   
-우테코에서는 연극, 데일리 미팅, 페어 프로그래밍, 미니 미션 등 끊임 없이 할 일을 주었다.    
-새로운 환경에 적응하면서 미션들을 수행하다보니 정신없는 한달을 보냈다.   
+우테코에서는 연극, 데일리 미팅, 페어 프로그래밍, 미니 미션 등 끊임 없이 할 일을 주었다.   
+새로운 환경에 적응하면서 미션들을 수행하다보니 정신없이 한달을 보냈다.   
 지금 생각해보니 첫 한달 동안은 집에 들어가기만 하면 기절해서 잠들었던 것 같다.    
 또한 새로운 사람들을 많이 만났다. 원래도 말이 많은 편이 아니었지만 세월이 흐를수록 말을 하기 전에 생각이 많아져서 말을 더 아끼게 되고 새로운 사람들을 사귀는 것이 어려워졌다.   
 사실 제일 걱정했던 부분도 우테코는 거의 팀 미션으로 구성되어있다는 점이었다. 하지만 다행히 좋은 사람들을 만나서 미션들을 무사히 완료할 수 있었다.    
@@ -37,6 +37,7 @@
 그리고 잘한 점을 꼽아보았다.
 1. 학습한 내용을 바로바로 코드에 적용해본 점
 2. 루틴한 삶을 지키기 위해 일찍 일어나서 수영을 시작함
+3. 우테코와 우테코 밖의 삶의 중심을 잡음
 
 
 이제 레벨 1 이 거의 끝나간다. 이제 더이상 춥지 않고 어느덧 선선한 바람이 불고 있다.   
