docs: 어색한 문장 수정

--- a/레벨1-기록/우아한테크코스 한 달 생활기.md
+++ b/레벨1-기록/우아한테크코스 한 달 생활기.md
@@ -19,7 +19,7 @@
 
 어찌 되었든 간에 프리코스 과정은 나에게 확신을 주었고 '우아한테크코스에 선발되지 못하더라도 개발자가 되어야겠다'고 결정했기에 최종 발표가 나오기 전 인사팀에 사직원을 제출했다. 그리고 정말 다행히도 우아한테크코스에 합류하게 되었다.
 
-1월 한 달 놀고먹는 황금 백수기가 지나가고 2월 7일 우아한테크코스에서 (예비)개발자로서의 생활이 시작됐다. 온보딩 조원들과 숨 막히는 첫 점심을 먹었다. 초밥을 먹었는데 어색해서 입으로 먹는지 코로 먹는지 모를 정도였고 심지어 맛도 없었다. 이런 상태로 연극 준비를 시작했는데 다들 첫인상과 달리 정상은 아니었다. 그래서 빨리 친해질 수 있었고 이들과 함께하는 모든 게 재밌었다. 특히 연극 연습을 하면서 정말 많이 웃었다. 연극 발표가 끝나고 느꼈던 점은 '우테코 크루들 연기 정말 잘한다!'는 것이었다. 다들 부끄러워하더니 말이다. 모든 연극 발표를 보지 못해서 아쉬울 정도였다. 내년 기수에는 프론트, 백엔드, 안드로이드 모두 모여서 하면 좋을 것 같다. 연극 발표가 끝난 후, 온보딩 조는 일주일이 지나면 헤어져야 했기에 1주 차 회고에 '모두 다른 팀에 가서도 행복한 생활을 하기를 바란다'고 썼으나 우리는 여전히 온보딩 망령조로 활동하고 있다.
+1월 한 달 놀고먹는 황금 백수기가 지나가고 2월 7일 우아한테크코스에서 (예비)개발자로서의 생활이 시작됐다. 온보딩 조원들과 숨 막히는 첫 점심을 먹었다. 초밥을 먹었는데 어색해서 입으로 먹는지 코로 먹는지 모를 정도였고 심지어 맛도 없었다. 이런 상태로 연극 준비를 시작했는데 다들 첫인상과 달리 정상은 아니었다. 그래서 빨리 친해질 수 있었고 이들과 함께하는 모든 게 재밌었다. 특히 연극 연습을 하면서 정말 많이 웃었다. 연극 발표가 끝나고 느꼈던 것은 '우테코 크루들 연기 정말 잘한다!'였다. 다들 부끄러워하더니 말이다. 모든 연극 발표를 보지 못해서 아쉬울 정도였다. 내년 기수에는 프론트, 백엔드, 안드로이드 모두 모여서 하면 좋을 것 같다. 연극 발표가 끝난 후, 온보딩 조는 일주일이 지나면 헤어져야 했기에 1주 차 회고에 '모두 다른 팀에 가서도 행복한 생활을 하기를 바란다'고 썼으나 우리는 여전히 온보딩 망령조로 활동하고 있다.
 
 기대했던 페어 프로그래밍도 시작됐다. 페어 프로그래밍을 하면서, 생각한 바를 명확하게 말로 전달한다는 것이 얼마나 어려운 것인지 다시금 깨달았다. 자기 생각을 잘 풀어내는 크루들을 보면서 '맞다. 나도 저런 생각을 했었는데' 하는 때가 많았고 내가 메타인지가 낮은 사람이라는 것을 알게 됐다. 그리고 이런 생각을 하게 되면서 우테코의 모든 과정이 메타인지 향상에 도움이 되는 것 같다고 느꼈다. 페어 프로그래밍에서는 페어와 의견을 나누면서, PR 메시지를 작성할 때는 자신이 고민했던 점과 이 문제를 해결하기 위해 어떤 접근을 했는지 등을 글로 정리해 보면서, 그리고 이렇게 글쓰기 미션을 하면서 말이다.
 
