--- a/레벨1.md
+++ b/레벨1.md
@@ -2,9 +2,9 @@
 ## 갈증
 작년 이즈음에 인연이 시작된 우아한테크코스(이하 우테코)가 올해도 모집 공고를 냈다.
 
- 아마 나의 목마름이 인연의 시작점이었던 것 같다. 프로그래밍에 매료되어 전공을 놓았던 나는 독학을 하며 스스로 만족하고 있었다. 이는 곧 커지는 불안함과 자주 마주하는 고난, 그리고 협업과 소통의 중요성을 느낄때마다 한계를 느꼈다. 그렇게 프로그래밍 교육을 더더욱 갈구했다. 이 갈증을 해소하기 위해 교육을 찾게 되었고, 자연스럽게 우테코를 알게 되었다.
+ 아마 나의 목마름이 인연의 시작점이었던 것 같다. 프로그래밍에 매료되어 전공을 놓았던 나는 독학을 하며 나름의 성장을 했다. 하지만 돌파하기 어려운 개념들을 마주하고 다른 개발자와의 협업과 소통의 중요성을 체감할 때마다 불안감이 엄습했다. 이 불안을 해소하기 위해 교육을 갈망하게 되었고, 자연스럽게 우테코를 알게 되었다.
 
- 간절함만으로는 성취할 수 없었다. 월등한 다른 지원자들의 코드와 처음 받아본 피드백은 떨어진 나에게 그 이유를 충분히 납득시켰다. 더 나아가 그간 해온 나의 학습 방식에 대한 반성을 들게 했고, 성장이라 믿었던 무언가의 민낯을 드러냈다. 목마름에 부딪혀본 우테코는 되려 다른 갈증을 안겨주었고 내가 학습하고 성장하며 나아가야 할 방향의 갈피를 전해주었다. 그렇게 우테코와의 첫 만남에서 얻어진 새로운 갈증과 갈피를 잊지 않으며 지난 한 해를 채웠다.
+ 간절함만으로는 성취할 수 없었다. 월등했던 다른 지원자들의 코드와 처음 받아본 피드백은 합격하지 못한 나에게 충분한 설명이 되어주었다. 더 나아가 그간 해온 나의 학습 방식에 대한 반성을 들게 했고, 성장이라 믿었던 무언가의 민낯을 드러냈다. 목마름에 부딪혀본 우테코는 되려 다른 갈증을 안겨주었고, 내가 학습하고 성장하며 나아가야 할 방향의 갈피를 전해주었다. 그렇게 우테코와의 첫 만남에서 얻어진 새로운 갈증과 갈피를 잊지 않으며 지난 한 해를 채웠다.
 
 ## 단맛
  궁금했다. 내 세상을 프로그래밍으로 뒤덮으며 모든 시간을 투자했던 지난 시간 동안 내가 찾던 성장을 이루어냈는지. 다시 마주한 우테코의 모집공고가 각별하면서도 새삼스러웠던 이유가 이때문일까.
@@ -20,13 +20,14 @@
   나는 우상과도 같았던 우테코의 대답을 믿었다. 이런 우상의 대답은 건방짐과 자만의 물꼬를 텄다. 이렇게 시작된 우테코의 생활은 쓰디쓴 고통을 느끼기에 충분했다. 우등한 실력과 함께 더 많은 노력과 열정을 보이는 크루들을 보면서 나의 자존감은 건방이었다는 것을 쉽사리 깨닫게 되었다. 우매함의 봉우리에서 추락하는 자존감은 입안 전체를 마르게 하는 강한 쓴맛을 남겼다. 그뿐인가? 자만심으로 가득 차 장담했었던 시간 관리, 계획적인 삶 그리고 독보적인 성장은 허황된 꿈으로 귀결됐을 때의 무너짐 역시 씁쓸했다. 남은 시간을 활용하여 공부하기는 커녕 놀 궁리만 했던 나 자신이 부끄럽게만 느껴졌다.
 
 ## 부드러움
- 쓴맛을 느꼈던 우테코에서 이를 잊게 하는 부드러움 역시 느낄 수 있다는 것은 우테코의 매력이 아닐까 싶다. 코치분들은 내가 느낄 쓴맛을 다 알고 있다는 듯이 비교는 자기 자신하고만 하라는, 어쩌면 상투적인 문구를 종종 전달한다. 식상한 격언이지만 의미를 곱씹다 보면 그 무엇보다도 부드러움이 느껴진다. 코치분들의 더 나은 교육을 위한 진심 어린 노력과 소통하는 모습, 그 프로다움을 느꼈기에, 그 위로의 부드러움이 더 진해진 것 같다.
+ 쓴맛을 느꼈던 우테코에서 이를 잊게 하는 부드러움 역시 느낄 수 있다는 것은 우테코의 매력이 아닐까 싶다. 코치분들은 내가 느낄 쓴맛을 다 알고 있다는 듯이 비교는 자기 자신하고만 하라는, 어쩌면 상투적인 문구를 종종 전달한다. 식상한 격언이지만 의미를 곱씹다 보면 내상 같던 씁쓸함을 그 무엇보다도 빠르게 치유된다. 아마 코치분들의 더 나은 교육을 위한 진심 어린 노력과 소통하는 모습, 그 프로다움에서 깊은 부드러움이 우러났기 때문인 것 같다.
 
- 쓴맛을 잊게 하는 건 비단 코치뿐만이 아니다. 고민을 진심으로 공감해주고 어떤 얘기든 함께 들어주는 크루들의 배려와 존중 역시 쓴맛으로 갈라진 입안에 포근한 부드러움을 느끼게 해준다. 같은 관심사에 비슷한, 혹은 더 많은 열정을 가진 사람과 조우 할 수 있다는 게 얼마나 소중한 기회인지 새삼 느낀다. 온보딩, 데일리 미팅, 코드 리뷰 그리고 페어 프로그래밍까지 크루와 함께 소통했던 시간을 또다시 눈을 감고 떠올리면 거칠거나 뻣뻣함 하나 없이 크루들과 연결된 부드러움을 느낀다.
+ 쓴맛을 씻겨 주는 건 비단 코치뿐만이 아니다. 고민을 진심으로 공감해주고 어떤 얘기든 함께 들어주는 크루들의 배려와 존중들을 되뇌이면 또 다른 부드러움이 느껴진다. 쓴맛으로 갈라진 입안을 포근하게 채워낸다. 같은 관심사에 비슷한, 혹은 더 많은 열정을 가진 사람과 조우 할 수 있다는 게 얼마나 소중한 순간인지 새삼 느낀다. 온보딩, 데일리 미팅, 코드 리뷰 그리고 페어 프로그래밍까지 크루와 함께 소통했던 시간들이 있기에 더 이상 쓴맛의 고통이 두렵지 않다.
 
-## 미완성 칵테일
+## 주조
  지원부터 한 달여간의 우테코 생활을 하며 얻어낸 각개의 감정들이 다양하다. 각각의 감정을 곱씹기보단 한 그릇에 모아 조화를 느껴보고 싶다. 다양한 믹서들을 취향껏 조합하여 마음대로 이름을 붙일 수 있는 칵테일처럼. 성취의 단맛, 해이함의 짠맛, 좌절의 쓴맛, 그 위로 얹은 부드러움으로 만들어 낸 한 달짜리 우테코 칵테일. 한 달짜리 우테코 칵테일은 아직, 아직 내 갈증을 해소할 모금이 되지 않은 것 같다.
 
- 테코톡의 설렘과 두려움, 크루들과의 팀 프로젝트, 코치와의 면담, 다양한 리뷰와 교육, 반복될 쓴맛과 부드러움이 더해지면 완성될까. 남은 8개월간 담길 수 있는 각개의 감정들을 모으다 보면 우테코 칵테일을 만들 수 있지 않을까. 
+ 테코톡의 설렘과 두려움, 크루들과의 팀 프로젝트, 코치와의 면담, 다양한 리뷰와 교육 그리고 수많은 미션들 속에서 느낄 다양한 감정들을 더하면 완성될까. 남은 시간동안 담길 수 있는 각개의 감정들을 모으다 보면 우테코 칵테일에 가까워지지 않을까 생각한다.
 
- 10개월간의 걸작이 처음 느꼈던 갈증을 해소할 수 있을 진 모르겠다. 그렇지만 그 누구도 흉내 낼 수 없는 유일한 우테코 칵테일을 꼭, 꼭 맛보고 싶다.
+ 10개월간의 걸작이 처음 느꼈던 갈증을 해소할 수 있을 진 모르겠다.
+ 그렇지만 반드시, 반드시 완성된 우테코 칵테일 한 모금으로 말라있던 내 목을 축이고 싶다.
