--- a/레벨1.md
+++ b/레벨1.md
@@ -4,7 +4,7 @@
 
  아마 나의 목마름이 인연의 시작점이었던 것 같다. 프로그래밍에 매료되어 전공을 놓았던 나는 독학을 하며 나름의 성장을 했다. 하지만 돌파하기 어려운 개념들을 마주하고 다른 개발자와의 협업과 소통의 중요성을 체감할 때마다 불안감이 엄습했다. 이 불안을 해소하기 위해 교육을 갈망하게 되었고, 자연스럽게 우테코를 알게 되었다.
 
- 간절함만으로는 성취할 수 없었다. 월등했던 다른 지원자들의 코드와 처음 받아본 피드백은 합격하지 못한 나에게 충분한 설명이 되어주었다. 더 나아가 그간 해온 나의 학습 방식에 대한 반성을 들게 했고, 성장이라 믿었던 무언가의 민낯을 드러냈다. 목마름에 부딪혀본 우테코는 되려 다른 갈증을 안겨주었고, 내가 학습하고 성장하며 나아가야 할 방향의 갈피를 전해주었다. 그렇게 우테코와의 첫 만남에서 얻어진 새로운 갈증과 갈피를 잊지 않으며 지난 한 해를 채웠다.
+ 간절함 뿐이었던 나는 우테코에 합격할 수 없었다. 월등했던 다른 지원자들의 코드와 처음 받아본 피드백은 떨어졌던 나에게 충분한 설명이 되어주었다. 더 나아가 그간 해온 나의 학습 방식에 대한 반성을 들게 했고, 성장이라 믿었던 무언가의 민낯을 드러냈다. 목마름에 부딪혀본 우테코는 되려 다른 갈증을 안겨주었고, 내가 학습하고 성장하며 나아가야 할 방향의 갈피를 전해주었다. 그렇게 우테코와의 첫 만남에서 얻어진 새로운 갈증과 갈피를 잊지 않으며 지난 한 해를 채웠다.
 
 ## 단맛
  궁금했다. 내 세상을 프로그래밍으로 뒤덮으며 모든 시간을 투자했던 지난 시간 동안 내가 찾던 성장을 이루어냈는지. 다시 마주한 우테코의 모집공고가 각별하면서도 새삼스러웠던 이유가 이때문일까.
@@ -17,10 +17,10 @@
  기대가 컸던 탓일까. 혹은 우테코가 은탄환이라 생각했던 탓일까. 모든 것을 잊고 유혹에 충실할 수 있었던 이유 말이다. 프로그래밍은 잊은 채, 놀기에 바빴다. 이때의 기간을 다시 눈을 감고 떠올리면, 얼굴이 찌푸려지는 짠맛이 감돈다. 부끄럽기 짝이 없었던 나태함과 피폐함을 환기하고 싶지 않다. 어떻게든 중화하고 씻어내고 싶다. 이 욕구는 여전히 작동하여 우테코 생활에 스며들법한 나태함과 해이함을 적당히 경계하며 힐책하고 있다.
 
 ## 쓴맛
-  나는 우상과도 같았던 우테코의 대답을 믿었다. 이런 우상의 대답은 건방짐과 자만의 물꼬를 텄다. 이렇게 시작된 우테코의 생활은 쓰디쓴 고통을 느끼기에 충분했다. 우등한 실력과 함께 더 많은 노력과 열정을 보이는 크루들을 보면서 나의 자존감은 건방이었다는 것을 쉽사리 깨닫게 되었다. 우매함의 봉우리에서 추락하는 자존감은 입안 전체를 마르게 하는 강한 쓴맛을 남겼다. 그뿐인가? 자만심으로 가득 차 장담했었던 시간 관리, 계획적인 삶 그리고 독보적인 성장은 허황된 꿈으로 귀결됐을 때의 무너짐 역시 씁쓸했다. 남은 시간을 활용하여 공부하기는 커녕 놀 궁리만 했던 나 자신이 부끄럽게만 느껴졌다.
+  나는 우상과도 같았던 우테코의 대답을 믿었다. 이런 우상의 대답은 건방짐과 자만의 물꼬를 텄다. 이렇게 시작된 우테코의 생활은 쓰디쓴 고통을 느끼기에 충분했다. 우등한 실력과 함께 더 많은 노력과 열정을 보이는 크루들을 보면서 나의 자존감은 건방이었다는 것을 쉽사리 깨닫게 되었다. 우매함의 봉우리에서 추락하는 자존감은 입안 전체를 마르게 하는 강한 쓴맛을 남겼다. 그뿐인가? 우테코 생활을 하며 완벽한 시간 관리, 계획적인 삶 그리고 독보적인 성장을 이루리라 장담했었던 자신이 떠올랐다. 무엇을 이루었는지 돌이켜 볼때면 또 다른 쓴맛이 입안을 감돌았다. 남은 시간을 활용하여 공부하기는 커녕 놀 궁리만 했던 나 자신이 부끄럽게만 느껴졌다.
 
 ## 부드러움
- 쓴맛을 느꼈던 우테코에서 이를 잊게 하는 부드러움 역시 느낄 수 있다는 것은 우테코의 매력이 아닐까 싶다. 코치분들은 내가 느낄 쓴맛을 다 알고 있다는 듯이 비교는 자기 자신하고만 하라는, 어쩌면 상투적인 문구를 종종 전달한다. 식상한 격언이지만 의미를 곱씹다 보면 내상 같던 씁쓸함을 그 무엇보다도 빠르게 치유된다. 아마 코치분들의 더 나은 교육을 위한 진심 어린 노력과 소통하는 모습, 그 프로다움에서 깊은 부드러움이 우러났기 때문인 것 같다.
+ 쓴맛을 느꼈던 우테코에서 이를 잊게 하는 부드러움 역시 느낄 수 있다는 것은 우테코의 매력이 아닐까 싶다. 코치분들은 내가 느낄 쓴맛을 다 알고 있다는 듯이 '비교는 자기 자신하고만 하라'는, 어쩌면 상투적인 문구를 종종 전달한다. 식상한 격언이지만 의미를 곱씹다 보면 내상 같던 씁쓸함을 그 무엇보다도 빠르게 치유된다. 아마 코치분들의 더 나은 교육을 위한 진심 어린 노력과 소통하는 모습, 그 프로다움에서 깊은 부드러움이 우러났기 때문인 것 같다.
 
  쓴맛을 씻겨 주는 건 비단 코치뿐만이 아니다. 고민을 진심으로 공감해주고 어떤 얘기든 함께 들어주는 크루들의 배려와 존중들을 되뇌이면 또 다른 부드러움이 느껴진다. 쓴맛으로 갈라진 입안을 포근하게 채워낸다. 같은 관심사에 비슷한, 혹은 더 많은 열정을 가진 사람과 조우 할 수 있다는 게 얼마나 소중한 순간인지 새삼 느낀다. 온보딩, 데일리 미팅, 코드 리뷰 그리고 페어 프로그래밍까지 크루와 함께 소통했던 시간들이 있기에 더 이상 쓴맛의 고통이 두렵지 않다.
 
