--- a/깃짱의한달생활기.md
+++ b/깃짱의한달생활기.md
@@ -2,14 +2,14 @@
 
 다들 시간이 빠르게 지나갔다고 하지만, 나에게 시간은 나름 정속으로 갔다. 
 특히나 계속 기록하는 습관이 있다 보니, 매일 일기를 최고 네 줄씩 작성하는데, 한 달 전과 정말 많이 발전했다는 생각이 든다. 
-집에서 설렁설렁 개발 공부하던 때보다 매일 일정한 시간에 공부하다 보니, 주변 환경이 왜 중요하다 하는지 알 수 있었다.
+집에서 설렁설렁 개발 공부하던 때와는 달리 매일 일정한 시간에 공부하다 보니, 주변 환경이 왜 중요하다 하는지 알 수 있었다.
 
 ### 중요도 선정중...
 
 내가 얼마만큼 해야 하는지에 대한 고찰을 했던 한 달이었다. 
 나는 체력이 좋은 편도 아니고, 엉덩이는 상당히 가벼운 편이다. 
 순간 집중력은 나쁘지 않아서 아주 오래전에 공부는 잘 하는 편이었지만,, 늘 다른 사람들의 입에 오를 만큼 열정을 보일 수 있는 편은 아니었다.
-또 쉽게 지겨움을 느끼고, 집중이 안 될 때에도 우직하게 버티는 것은 나에게 너무 어렵다. 
+또 쉽게 지겨움을 느끼는 편인 데다가, 집중이 안 될 때에도 우직하게 버티는 것은 나에게 너무 어렵다. 
 저녁 즈음만 되면 너무 머리를 많이 쓴 것이 느껴지면서 집에 가고 싶어져서 칼 퇴근하는 이미지가 굳어져 버렸다. 
 앞으로의 생활에서 스트레스를 최대한 받지 않으면서 즐겁게 우테코 생활을 하기 위해서 기준에 대해서 첫 달 동안 많은 생각을 했다.
 
@@ -21,7 +21,7 @@
 어떻게 해야 가장 잘 학습할 수 있을까? 
 나는 1순위가 컨디션 관리다. 
 나는 학습 시간이 어느 정도 이상 길어지면 오히려 학습 총량은 줄어드는 느낌을 받을 때가 있다. 머리를 많이 써야 하는 일이다 보니, 잘 자고 잘 먹지 않으면 골치 아픈 일 앞에서 회피하게 된다. 
-항상 좋은 컨디션을 유지해서 도전적인 자세로 학습하려면 따라서 학습 시간이 어느 정도 선을 넘어서는 안 된다는 것을 고등학생 때 깨달았다.
+항상 좋은 컨디션을 유지해서 도전적인 자세로 학습하려면 학습 시간이 어느 정도 선을 넘어서는 안 된다는 것을 고등학생 때 깨달았다.
 주위에 시간을 열정의 기준으로 삼는 사람들을 쉽게 찾아볼 수 있지만, 나는 나만의 기준을 가지려고 하고 있다. 
 기준은 바로바로 진심으로 피하지 않고 고민했는가이다. 
 
@@ -32,7 +32,8 @@
 또 우테코 출퇴근 길에 매일 듣는 일본어 방송이 있는데, 이런 부분들이 내가 너무 매몰되지 않고 살게 해주는 것들이다. 
 앞으로도 내 할 일을 충분히 했다고 판단하면 모든 것을 내려놓고 놀 예정이다. 
 레벨 1에서 너무 여가를 심히 즐긴 바람에 일이 밀린 적이 있었기 때문에, 무게중심을 다시 잡기는 해야 할 것 같다. 
-어쩌면 레벨 2부터는 너무 어려워진다면, 노는 것에 마음이 편하지 않을 테니, 그때 제대로 놀 수 없다고 생각하면 더 학습 시간을 더 늘리는 것도 좋을 것 같다.
+어쩌면 레벨 2부터는 너무 어려워진다면, 노는 것에 마음이 편하지 않을 것 같다.   
+그때 제대로 놀 수 없다고 생각하면 학습 시간을 더 늘리는 것도 좋을 것 같다.
 
 나는 작은 성취감을 모아서 살아간다. 
 그래서 항상 작은 것이라도 내가 발전했다는 느낌을 기록으로 남겨야 한다. 
@@ -44,4 +45,4 @@
 앞으로 계속해서 규칙적인 생활을 하면서 멘탈 관리 측면에서도 노력할 것이다. 
 나 자신에 대한 평가는 절대평가로 갈 텐데, 내 눈에 지난 미션보다 나아졌다면 통과로 하기로 했다. 
 우테코는 모두가 같은 미션에 대한 코드를 작성하다 보니 비교하기가 쉽다. 
-나는 프리 코스 첫날 자바를 시작한 만큼 백엔드에서 자바 경력이 가장 짧으니 좀 더 열심히 노력해 겠다! 
+나는 프리 코스 첫날 자바를 시작한 만큼 백엔드에서 자바 경력이 가장 짧으니 좀 더 열심히 노력해야 겠다! 
