docs: 특정 부분 강조 처리 추가
Co-authored-by: amaranth <81465068+amaran-th@users.noreply.github.com>

--- a/우아한테크코스 한 달 생활기.md
+++ b/우아한테크코스 한 달 생활기.md
@@ -16,7 +16,7 @@
 
 농구를 좋아해 중학교 시절 학교 대표로 경기를 뛴 적도 있었고, 공부도 그럭저럭 나쁘지 않은 성적을 냈었다.
 
-하지만 둘 다 내가 원하는 수준에 도달하기란 쉽지 않았다. 재능이 없었던 것일까? 고민 끝에 내가 내린 결론은 경쟁자가 너무 많다는 것이었다.
+하지만 둘 다 내가 원하는 수준에 도달하기란 쉽지 않았다. 재능이 없었던 것일까? 고민 끝에 내가 내린 결론은 ***경쟁자가 너무 많다***는 것이었다.
 
 <br>
 
