docs: 문장 내 어색한 부분 수정
Co-authored-by: amaranth <81465068+amaran-th@users.noreply.github.com>

--- a/우아한테크코스 한 달 생활기.md
+++ b/우아한테크코스 한 달 생활기.md
@@ -49,7 +49,7 @@
 
 <br>
 
-여러 활동 중 페어 프로그래밍이 가장 힘들었다. 혼자 했다면 훨씬 빨리 끝날 것 같던 기능 구현도 페어를 설득해야 했고, 서로 역할을 변경하는 규칙도 잘 안 지켜질 때가 많았다.
+여러 활동 중 페어 프로그래밍이 가장 힘들었다. 혼자 했다면 훨씬 빨리 끝날 것 같던 기능 구현도 페어를 설득하느라 더 많은 시간을 들여야 했고, 서로 역할을 변경하는 규칙도 잘 안 지켜질 때가 많았다.
 
 하지만 어쩐 일인지 페어를 마치고 혼자 추가 기능을 구현할 때 왠지 모를 두려움이 찾아올 때가 잦아졌다. 내가 실수할 때 잡아주는 페어가 없으니 지금 구현하는 부분에서 실수가 있진 않을지 두려워졌다.
 
