docs: 글쓰기 미션 업데이트
Co-authored-by: amaranth <81465068+amaran-th@users.noreply.github.com>

--- a/우아한테크코스 한 달 생활기.md
+++ b/우아한테크코스 한 달 생활기.md
@@ -63,4 +63,4 @@
 
 <br>
 
-혼자 특별하고자 했던 초보 개발자에게 함께함의 특별함을 알려준 우테코는 정말 소중한 기회가 아닐까 싶다. 이제 겨우 한 달이지만 많은 것이 변했다. 혼자보다 여럿이 이야기하며 코딩하는 것이 좋아졌고, 나 혼자 특별하고자 하는 마음가짐도 바뀌게 됐다.
+혼자 특별하고 싶었던 초보 개발자에게 함께함이 가지는 특별함을 알려준 우테코는 정말 소중한 기회가 아닐까 싶다. 이제 겨우 한 달이 지났지만 많은 것이 변했다. 혼자보다 여럿이 이야기하며 코딩하는 것이 좋아졌고, 나 혼자 특별하고자 하는 마음가짐도 바뀌게 됐다.
