docs: 글쓰기 미션 업데이트

--- a/우아한테크코스 한 달 생활기.md
+++ b/우아한테크코스 한 달 생활기.md
@@ -12,15 +12,15 @@
 
 <br>
 
-어떤 분야에서 인정받을 만한 결과를 내기란 쉬운 일이 아니었다. 우선 남들보다 뛰어나야 했다. 처음엔 남들 다 하는 공부나 구기 종목 등으로 인정받고자 했다.
+어떤 분야에서 인정받을 만한 결과를 내기란 쉬운 일이 아니었다. 우선 남들보다 뛰어나야 했다. 처음엔 남들 다 하는 공부나 내가 좋아하던 농구로 인정받고자 했다.
 
-농구를 좋아해 중학교 시절 학교 대표로 경기를 뛴 적도 있었고, 공부도 그럭저럭 나쁘지 않은 성적을 냈었다.
+농구가 좋아 중학교 시절 학교 대표로 경기를 뛴 적도 있었고, 공부도 그럭저럭 나쁘지 않은 성적을 냈었다.
 
-하지만 둘 다 내가 원하는 수준에 도달하기란 쉽지 않았다. 재능이 없었던 것일까? 고민 끝에 내가 내린 결론은 ***경쟁자가 너무 많다***는 것이었다.
+하지만 둘 다 내가 원하는 수준에 도달하기란 쉽지 않았다. 재능이 없었던 것일까? 고민 끝에 내가 내린 결론은 **_경쟁자가 너무 많다_**는 것이었다.
 
 <br>
 
-내 주변에 공부를 잘하는 친구는 많았고, 구기 종목을 잘하는 친구들도 정말 많았다. 경쟁력을 갖추고자 선택한 것이 프로그래밍이었다.
+내 주변엔 공부를 잘하는 친구가 많았고, 대회를 나가보니 나보다 농구를 잘하는 친구들도 정말 많았다. 경쟁력을 갖추고자 선택한 것이 프로그래밍이었다.
 
 유령이란 드라마를 보고 코딩에 관심이 생겨 공부를 시작했다. 특별한 결과를 내지 않아도 어려운 용어를 사용하며 내가 한 공부를 설명하자 모두 신기해했다.
 
