docs: 글쓰기 미션 업데이트

--- a/우아한테크코스 한 달 생활기.md
+++ b/우아한테크코스 한 달 생활기.md
@@ -2,7 +2,7 @@
 
 <br>
 
-> ### ⁉️ "개발자를 꿈꾸게 된 이유가 뭐예요?? 프로그래밍을 시작한 이유는 뭔가요?!"
+### ⁉️ "개발자를 꿈꾸게 된 이유가 뭐예요?? 프로그래밍을 시작한 이유는 뭔가요?!"
 
 <br>
 
@@ -35,11 +35,7 @@
 <br>
 <br>
 
-## 우테코 한 달 생활기
-
-<br>
-
-### 혼자 특별할 필요가 있을까?
+## 우테코에서의 한 달
 
 <br>
 
