docs: 피드백 반영
- 소제목 추가
- 어색한 문장 수정

--- a/레벨1-기록/우아한테크코스 한 달 생활기.md
+++ b/레벨1-기록/우아한테크코스 한 달 생활기.md
@@ -1,16 +1,22 @@
-# 백수지만 개발자입니다
+# "백수지만 개발자입니다."
+
+## "끝이지만 시작입니다."
 
 서울시 모 구청의 8급 공무원이었다. 2020년 2월 3일 신규 발령을 받았고 2022년 1월 17일 승진도 했다. 하지만 엄청난 기쁨도 감흥도 없었다.
 
-2022년 12월 8일 팀장님께 면직 의사를 밝혔다. 고민은 길었지만, 2023년 1월 2일 약 3년간의 짧은 공직 생활은 생각보다 쉽게 끝이 났다. 짧은 기간이었지만 많은 경험을 했고 또 다른 성장을 할 수 있었다. 코로나가 한창일 때는 주말에도 매일 2번씩 관내 확진자에게 전화해 몸 상태는 어떤지, 집 밖으로 나가진 않았는지 확인했다. 거리두기 4단계일 때는 저녁에 관내 노래방, PC방 등을 다니며 마스크 쓰기, 한 칸 띄어 앉기, 운영시간 제한 등은 잘 지키고 있는지 점검도 다녔다. 눈이 많이 오는 날에는 다 같이 눈을 쓸러 나가기도 했고 대통령 선거, 국회의원 선거 등 선거가 있는 해에는 투표 마지막 날 저녁부터 다음 날 새벽까지 투표지분류기 운영요원으로 근무하기도 했다. 평소에도 직원 및 민원인들과 매일 30통 이상의 전화를 주고받으면서 공포스럽던 전화벨 소리에도 익숙해졌다. 골목 가로등이 꺼져있는데 어디에 말하면 되냐고 물어보던 친구에게 120에 문자를 보내면 된다고 답해줄 수 있었고 유용한 정보가 구청 홈페이지에 올라오면 주변에 알려줄 수 있었다. 또한 식당 직원, 동 주민 센터 직원 등 사람을 상대하는 일을 하는 이들에게 더욱 공감했고 친절해질 수 있었다.
+2022년 12월 8일 팀장님께 면직 의사를 밝혔다. 고민은 길었지만, 2023년 1월 2일 약 3년간의 짧은 공직 생활은 생각보다 쉽게 끝이 났다. 짧은 기간이었지만 많은 경험을 했고 또 다른 성장을 할 수 있었다.
+
+코로나가 한창일 때는 주말에도 매일 2번씩 관내 확진자에게 전화해 몸 상태는 어떤지, 집 밖으로 나가진 않았는지 확인했다. 거리두기 4단계일 때는 저녁에 관내 노래방, PC방 등을 다니며 마스크 쓰기, 한 칸 띄어 앉기, 운영시간 제한 등은 잘 지키고 있는지 점검도 다녔다. 눈이 많이 오는 날에는 다 같이 눈을 쓸러 나가기도 했고 대통령 선거, 국회의원 선거 등 선거가 있는 해에는 투표 마지막 날 저녁부터 다음 날 새벽까지 투표지분류기 운영요원으로 근무하기도 했다. 평소에도 직원 및 민원인들과 매일 30통 이상의 전화를 주고받으면서 공포스럽던 전화벨 소리에도 익숙해졌다. 골목 가로등이 꺼져있는데 어디에 말하면 되냐고 물어보던 친구에게 120에 문자를 보내면 된다고 답해줄 수 있었고, 유용한 정보가 구청 홈페이지에 올라오면 주변에 알려줄 수 있었다. 또한 식당 직원, 동 주민 센터 직원 등 사람을 상대하는 일을 하는 이들에게 더욱 공감했고 친절해질 수 있었다.
 
 하지만 나는 항상 삶의 의미를 찾았고 어떻게 살아야 즐겁게 살 수 있는지 고민했다. 친구들은 일하면서 자아실현 할 수 없고 삶의 의미도 찾지 말라고 했지만, 나에게 일은 살아감에 있어서 아주 중요한 부분이었다. 하루 중 대부분의 시간을 사무실에 앉아 보내면서 깨달았던 것이다.
 
-이렇게 살다가 정년퇴직하면 '이 정도면 잘 살았다'라고 만족할 수 있을지 생각해보았다. 대답은 물론 '아니다'였다. 2년 넘게 지속했던 고민의 답을 찾았다.
+'이렇게 살다가 정년퇴직하면, 이 정도면 잘 살았다고 만족할 수 있을까?'라는 물음을 던졌다. 대답은 물론 '아니다'였다. 2년 넘게 지속했던 고민의 답을 찾았다.
 
-컴퓨터공학을 전공했다. 더 잘하고 재능있는 친구들과 비교했고 도망쳤다. 안정적인 직장을 얻었고 이 이야기의 끝은 "행복하게 살았습니다"라고 하는 해피엔딩인 줄 알았으나 그것은 또 다른 고민의 시작이었다. 그래서 돌고 돌아 우아한테크코스 프리코스에 참여하게 되었다.
+## "백수지만 개발자입니다."
 
-> 하루는 오전 5시 반에 눈이 떠졌는데 오후 11시까지 정말 밥만 먹고 코딩만 했던 것 같습니다. 신기하게도 몰입을 하니, 눈이 침침해지고 피곤하긴 했지만 잠이 오지도 않았고 배도 고프지 않았습니다. 그리고 뭔가 제 자신이 멋지다고 생각했습니다.
+본래 컴퓨터공학을 전공했다. 더 잘하고 재능있는 친구들과 비교했고 도망쳤다. 안정적인 직장을 얻었고 이 이야기의 끝은 "행복하게 살았습니다"라고 하는 해피엔딩일 줄 알았으나 그것은 또 다른 고민의 시작이었다. 그래서 돌고 돌아 우아한테크코스 프리코스에 참여하게 되었다.
+
+> 하루는 오전 5시 반에 눈이 떠졌는데 오후 11시까지 정말 밥만 먹고 코딩만 했던 것 같습니다. 신기하게도 몰입을 하니, 눈이 침침해지고 피곤하긴 했지만 잠이 오지도 않았고 배도 고프지 않았습니다. 그리고 뭔가 저 자신이 멋지다고 생각했습니다.
 > \- 프리코스 2주 차 숫자 야구 미션 회고록 중 -
 
 몰입하는 스스로가 멋지다고 생각했고 몰입하는 경험 자체가 정말 즐겁고 좋았던 것 같다. 프리코스 3주 차 로또 미션에서는 작성한 코드를 보며 '이만하면 잘 짠 것 같은데?'라는 생각도 했었다. 지금 생각해보면 이때는 포비가 말했던 더닝크루거 곡선 중 우매함의 봉우리 단계(아는 게 없음, 자신감 높음)였던 것 같다.
@@ -19,14 +25,20 @@
 
 어찌 되었든 간에 프리코스 과정은 나에게 확신을 주었고 '우아한테크코스에 선발되지 못하더라도 개발자가 되어야겠다'고 결정했기에 최종 발표가 나오기 전 인사팀에 사직원을 제출했다. 그리고 정말 다행히도 우아한테크코스에 합류하게 되었다.
 
-1월 한 달 놀고먹는 황금 백수기가 지나가고 2월 7일 우아한테크코스에서 (예비)개발자로서의 생활이 시작됐다. 온보딩 조원들과 숨 막히는 첫 점심을 먹었다. 초밥을 먹었는데 어색해서 입으로 먹는지 코로 먹는지 모를 정도였고 심지어 맛도 없었다. 이런 상태로 연극 준비를 시작했는데 다들 첫인상과 달리 정상은 아니었다. 그래서 빨리 친해질 수 있었고 이들과 함께하는 모든 게 재밌었다. 특히 연극 연습을 하면서 정말 많이 웃었다. 연극 발표가 끝나고 느꼈던 것은 '우테코 크루들 연기 정말 잘한다!'였다. 다들 부끄러워하더니 말이다. 모든 연극 발표를 보지 못해서 아쉬울 정도였다. 내년 기수에는 프론트, 백엔드, 안드로이드 모두 모여서 하면 좋을 것 같다. 연극 발표가 끝난 후, 온보딩 조는 일주일이 지나면 헤어져야 했기에 1주 차 회고에 '모두 다른 팀에 가서도 행복한 생활을 하기를 바란다'고 썼으나 우리는 여전히 온보딩 망령조로 활동하고 있다.
+## "개발자지만 배우입니다."
 
-기대했던 페어 프로그래밍도 시작됐다. 페어 프로그래밍을 하면서, 생각한 바를 명확하게 말로 전달한다는 것이 얼마나 어려운 것인지 다시금 깨달았다. 자기 생각을 잘 풀어내는 크루들을 보면서 '맞다. 나도 저런 생각을 했었는데' 하는 때가 많았고 내가 메타인지가 낮은 사람이라는 것을 알게 됐다. 그리고 이런 생각을 하게 되면서 우테코의 모든 과정이 메타인지 향상에 도움이 되는 것 같다고 느꼈다. 페어 프로그래밍에서는 페어와 의견을 나누면서, PR 메시지를 작성할 때는 자신이 고민했던 점과 이 문제를 해결하기 위해 어떤 접근을 했는지 등을 글로 정리해 보면서, 그리고 이렇게 글쓰기 미션을 하면서 말이다.
+1월, 한 달의 놀고먹는 황금 백수기가 지나가고 2월 7일 우아한테크코스에서 (예비)개발자로서의 생활이 시작됐다. 온보딩 조원들과 숨 막히는 첫 점심을 먹었다. 초밥을 먹었는데 어색해서 입으로 먹는지 코로 먹는지 모를 정도였고 심지어 맛도 없었다. 이런 상태로 연극 준비를 시작했는데 다들 첫인상과 달리 은은하게 돌아있었다. 그래서 빨리 친해질 수 있었고 이들과 함께하는 모든 게 재밌었다. 특히 연극 연습을 하면서 정말 많이 웃었다. 연극 발표가 끝나고 느꼈던 것은 '우테코 크루들 연기 정말 잘한다!'였다. 다들 부끄러워하더니 말이다. 모든 연극 발표를 보지 못해서 아쉬울 정도였다. 내년 기수에는 프론트, 백엔드, 안드로이드 모두 모여서 하면 좋을 것 같다. 연극 발표가 끝난 후, 온보딩 조는 일주일이 지나면 헤어져야 했기에 1주 차 회고에 '모두 다른 팀에 가서도 행복한 생활을 하기를 바란다'고 썼으나 우리는 여전히 '온보딩 망령'조로 활동하고 있다.
 
-레벨1이 끝나가고 있다. 우테코 정말 쉽지 않다. 매일 기술 부채가 쌓였고 스스로의 부족함을 더 크게 느낀다. 프리코스 때는 우매함의 봉우리에 있었다면 갈수록 절망의 계곡에 가고 있다는 느낌을 받는다. 어떨 때는 분하고 답답하기도 하다. 하지만 이곳에는 함께 고민해주고 질문을 하면 친절하게 알려주는 크루들, 응원과 위로를 해주는 리뷰어, 코치님들이 있다. 그리고 이런 부정적인 감정의 찌꺼기를 해소하는 나만의 방법도 있다. 긍정적인 말들로 자기 세뇌를 하는 것이다.
+## "혼자지만 둘입니다."
 
-> Fake it Till you make it!
+기대했던 페어 프로그래밍도 시작됐다. 페어 프로그래밍을 하면서, 생각한 바를 명확하게 말로 전달한다는 것이 얼마나 어려운 것인지 다시금 깨달았다. 자기 생각을 잘 풀어내는 크루들을 보면서 '맞다. 나도 저런 생각을 했었는데' 하는 때가 많았고 내가 메타인지가 낮은 사람이라는 것을 알게 됐다. 그리고 이 사실을 자각하며, 문득 '우아한테크코스'의 모든 과정이 메타인지 향상에 도움이 되는 것 같다고 느꼈다. 페어 프로그래밍에서는 페어와 의견을 나누면서, PR 메시지를 작성할 때는 고민했던 점과 문제를 해결하기 위해 어떤 접근을 했는지 등을 글로 정리해 보면서, 그리고 이렇게 글쓰기 미션을 하면서 말이다.
+
+## "레벨1이지만 난이도 '상'입니다."
+
+레벨1이 끝나가고 있다. 우테코 정말 쉽지 않다. 매일 기술 부채가 쌓이고 스스로의 부족함을 더 크게 느낀다. 프리코스 때는 우매함의 봉우리에 있었다면 갈수록 절망의 계곡에 가고 있다는 느낌을 받는다. 어떨 때는 분하고 답답하기도 하다. 하지만 이곳에는 함께 고민해주고 질문을 하면 친절하게 알려주는 크루들, 응원과 위로를 해주는 리뷰어, 코치님들이 있다. 그리고 이런 부정적인 감정의 찌꺼기를 해소하는 나만의 방법도 있다. 긍정적인 말들로 자기 세뇌를 하는 것이다.
+
+## "Fake it Till you make it!"
 
 "될 때까지 그런 척하면 그렇게 된다"는 의미인데 예전에 친구에게 듣고 난 이후로 계속 마음에 되새기는 문장이다. "나는 잘하고 있어", "나는 대기만성형이야" 이렇게 말하다 보면 정말 그렇다고 느끼게 된다. 그리고 가끔은 정말 말한 대로 이루어지기도 한다. 이 방법이 안 통할 때도 있겠지만 언제나 그렇듯 그것 또한 내 성장 곡선의 변곡점이 될 것이기에 괜찮다.
 
-한 달밖에 안 됐는데 다채로운 경험 속에 던져졌고 다양한 감정을 느끼고 많은 깨달음을 얻었다. 앞으로 남은 기간 언제 절망의 계곡을 지나 깨달음의 오르막에 도달할 수 있을지는 모르겠다. 하지만 언젠가는 지속가능성의 고원에 안착하여, 첨예한 견해를 가지고 깊은 생각을 할 수 있는 사람이 되기를! 훗날, 이 글을 다시 보게 될 나를 응원해주고 싶다.
+한 달밖에 안 됐는데 다채로운 경험 속에 던져졌고 다양한 감정을 느끼고 많은 깨달음을 얻었다. 앞으로 남은 기간 언제 절망의 계곡을 지나 깨달음의 오르막에 도달할 수 있을지는 모르겠다. 하지만 언젠가는 지속가능성의 고원에 안착하여, 첨예한 견해를 가지고 깊은 생각을 할 수 있는 사람이 되기를! 훗날, 이 글을 다시 보게 될 '우리'를 응원해주고 싶다.
