docs: 소제목 수정

--- a/레벨1-기록/우아한테크코스 한 달 생활기.md
+++ b/레벨1-기록/우아한테크코스 한 달 생활기.md
@@ -37,7 +37,7 @@
 
 레벨1이 끝나가고 있다. 우테코 정말 쉽지 않다. 매일 기술 부채가 쌓이고 스스로의 부족함을 더 크게 느낀다. 프리코스 때는 우매함의 봉우리에 있었다면 갈수록 절망의 계곡에 가고 있다는 느낌을 받는다. 어떨 때는 분하고 답답하기도 하다. 하지만 이곳에는 함께 고민해주고 질문을 하면 친절하게 알려주는 크루들, 응원과 위로를 해주는 리뷰어, 코치님들이 있다. 그리고 이런 부정적인 감정의 찌꺼기를 해소하는 나만의 방법도 있다. 긍정적인 말들로 자기 세뇌를 하는 것이다.
 
-## "Fake it Till you make it!"
+> "Fake it Till you make it!"
 
 "될 때까지 그런 척하면 그렇게 된다"는 의미인데 예전에 친구에게 듣고 난 이후로 계속 마음에 되새기는 문장이다. "나는 잘하고 있어", "나는 대기만성형이야" 이렇게 말하다 보면 정말 그렇다고 느끼게 된다. 그리고 가끔은 정말 말한 대로 이루어지기도 한다. 이 방법이 안 통할 때도 있겠지만 언제나 그렇듯 그것 또한 내 성장 곡선의 변곡점이 될 것이기에 괜찮다.
 
