Update 우아한테크코스 한 달 생활기.md

--- a/우아한테크코스 한 달 생활기.md
+++ b/우아한테크코스 한 달 생활기.md
@@ -6,26 +6,26 @@ _처음이라 그래 며칠뒤엔 괜찮아져
 가끔 멍때리고 있을 때 "1년전에 뭐했지? 1년 후에 뭐하고 있을까?" 라는 생각이 들 때가 있다. 그런 생각이 들 때 자주 듣는 노래의 가사이다.
 그리고 우테코 첫 한달동안 느꼈던 생각을 한 줄로 요약해야 한다면 딱 첫 가사처럼 나올 것이다.
 
-퇴사한지 1년쯤 되어 우테코를 알게 되었다. 감사하게도 과정을 진행할 수 있게 되어 매우 기뻤지만 동시에 또 걱정을 많이 했다.
-퇴사를 갓 했을 때의 열정과 의지는 다소 흐릿해졌다. 익숙한 사람들과 생활 반경 속에서 빠져나와 새로운 환경에 적응해야 한다는 생각에 두려움도 컸다.
-그 때 다시 1년 전의 나의 모습을 그려보았다. 1년 전의 나는 퇴사를 결심하고 정들었던 사람들과의 이별을 진행 중이었다.
+퇴사한지 1년쯤 되어 우테코를 알게 되었다. 감사하게도 과정을 진행할 수 있게 되어 매우 기뻤지만 동시에 또 걱정을 많이 했다.   
+퇴사를 갓 했을 때의 열정과 의지는 다소 흐릿해졌다. 익숙한 사람들과 생활 반경 속에서 빠져나와 새로운 환경에 적응해야 한다는 생각에 두려움도 컸다.   
+그 때 다시 1년 전의 나의 모습을 그려보았다. 1년 전의 나는 퇴사를 결심하고 정들었던 사람들과의 이별을 진행 중이었다.   
 그 당시 생각했던 1년 후의 나는 개발자로서의 커리어를 다시 시작한 모습이었는데..
-개발 공부는 할수록 나의 모자란 부분이 보이고 시간이 너무 부족했다.
-조급한 마음에 더 갈팡질팡하게 되었고 목표를 잃으니 더 이상 1년 후의 나의 모습이 그려지지 않았다.
-그러던 와중 참여할 수 있게 된 우테코 과정은 10개월로 짧지 않은 시간이라 고민을 많이 했다.
-하지만 우테코 안에서 제대로 된 개발 공부 방법을 배우고 개발자로서의 목표를 세울 수 있겠다는 확신이 들었다.
+개발 공부는 할수록 나의 모자란 부분이 보이고 시간이 너무 부족했다.      
+조급한 마음에 더 갈팡질팡하게 되었고 목표를 잃으니 더 이상 1년 후의 나의 모습이 그려지지 않았다.   
+그러던 와중 참여할 수 있게 된 우테코 과정은 10개월로 짧지 않은 시간이라 고민을 많이 했다.   
+하지만 우테코 안에서 제대로 된 개발 공부 방법을 배우고 개발자로서의 목표를 세울 수 있겠다는 확신이 들었다.   
 그래서 고민을 끝내고 우아한테크코스에 참여하기로 결정했다.
 
 #### 새로운 시작은 언제나 어렵다
 
-한 달동안의 생활은 새로운 시작에서 비롯한 낯선 경험의 연속이었다. 우선 정말 오랜만에 루틴이 있는 삶을 살았다. 출퇴근 시간이 생겼고, 평일과 주말, 공휴일을 구분할 수 있었다.
-우테코에서는 연극, 데일리 미팅, 페어 프로그래밍, 미니 미션 등 끊임 없이 할 일을 주었다.
-새로운 환경에 적응하면서 미션들을 수행하다보니 정신없이 한달을 보냈다.
-지금 생각해보니 첫 한달 동안은 집에 들어가기만 하면 기절해서 잠들었던 것 같다.
-또한 새로운 사람들을 많이 만났다. 원래도 말이 많은 편이 아니었지만 세월이 흐를수록 말을 하기 전에 생각이 많아졌다.
-그래서 말을 더 아끼게 되고 새로운 사람들을 사귀는 것이 어려워졌다.
-사실 제일 걱정했던 부분도 우테코는 거의 팀 미션으로 구성되어있다는 점이었다. 하지만 다행히 좋은 사람들을 만나서 미션들을 무사히 완료할 수 있었다.
-우리 연극 온보딩팀, 데일리 조원들, 자동차 경주, 사다리, 블랙잭, 체스 미션까지의 페어들 다 너무 감사하다.
+한 달동안의 생활은 새로운 시작에서 비롯한 낯선 경험의 연속이었다.    
+우선 정말 오랜만에 루틴이 있는 삶을 살았다. 출퇴근 시간이 생겼고, 평일과 주말, 공휴일을 구분할 수 있었다.   
+우테코에서는 연극, 데일리 미팅, 페어 프로그래밍, 미니 미션 등 끊임 없이 할 일을 주었다.   
+새로운 환경에 적응하면서 미션들을 수행하다보니 정신없이 한달을 보냈다.   
+지금 생각해보니 첫 한달 동안은 집에 들어가기만 하면 기절해서 잠들었던 것 같다.   
+또한 새로운 사람들을 많이 만났다. 원래도 말이 많은 편이 아니었지만 세월이 흐를수록 말을 하기 전에 생각이 많아졌다. 그래서 말을 더 아끼게 되고 새로운 사람들을 사귀는 것이 어려워졌다.      
+사실 제일 걱정했던 부분도 우테코는 거의 팀 미션으로 구성되어있다는 점이었다. 하지만 다행히 좋은 사람들을 만나서 미션들을 무사히 완료할 수 있었다.   
+우리 연극 온보딩팀, 데일리 조원들, 자동차 경주, 사다리, 블랙잭, 체스 미션까지의 페어들 다 너무 감사하다.   
 
 #### 우선순위를 가지고 목표를 세우자
 
