--- a/우아한테크코스 한 달 생활기.md
+++ b/우아한테크코스 한 달 생활기.md
@@ -2,13 +2,13 @@
 
 ## 2022년 회고
 
-2022년은 인생에서 제일 무기력하게 보낸 한 해였다. 집에는 취업 준비라는 허울 좋은 핑계를 대고 자취방에 종일 틀어박혀 지냈다.  
+2022년은 인생에서 제일 무기력하게 보낸 한 해였다. 부모님께 취업 준비라는 허울 좋은 핑계를 대고 자취방에 종일 틀어박혀 지냈다.  
 매일 아침 일찍 도서관에 가서 저녁에 돌아오는 삶을 살겠다는 다짐은 한 달을 겨우 채우고 무너졌다.  
 늦게 자고 늦게 일어나며 오후 2~3시쯤 먹는 한 끼로 하루를 때웠다.  
 공부를 안 한 건 아니지만 열심히 했다고 하기엔 민망한 정도였다. 목표했던 기업들로부터 모두 불합격 메일을 받았다.  
 10월의 나는 취업에 성공해서 거들떠보지도 않겠다고 다짐했던 우아한테크코스에 지원서를 쓰고 있었다.
 
-## 우아한테크코스 생활
+## 우아한테크코스 크루 생활 적응하기
 
 어쩌다 보니 합격해서 지금은 한 달 생활기를 주제로 글을 쓰고 있다.  
 은둔형 외톨이 생활을 청산하고 오랜만에 많은 사람과 어울려 지냈다.  
@@ -26,7 +26,7 @@
 ## 앞으로는 ?
 
 나름의 페이스를 지키며 잘 나아가고 있다. 사람들과 어울리는 것도 즐겁다.  
-경험상 번아웃이 여러 번 다가올 것이지만 의연하게 대처하고 싶다. 아니, 그래야만 한다.  
-혼자 공부할 때는 번번이 포기하며 동굴 속으로 나를 밀어 넣었다. 하지만 이번엔 느낌이 좋다.  
+경험상 번아웃이 여러 번 올 것이지만 의연하게 대처하고 싶다. 아니, 그래야만 한다.  
+혼자 공부할 때는 극복하기를 포기하고 동굴 속으로 나를 밀어 넣었다. 하지만 이번엔 느낌이 좋다.  
 눈을 반짝이며 각자의 목표를 향해 나아가는 크루들이 있기에 잘 이겨낼 수 있을 것만 같다.  
 동굴 밖으로 나와 교육 과정의 1/10을 무사히 마친 나에게 소소한 칭찬을 보내며 이 글을 마무리한다.
