--- a/우테코에서의 한달 생활기.md
+++ b/우테코에서의 한달 생활기.md
@@ -4,7 +4,7 @@
 
 ### 첫 번째 페어(도리) - “저 원래 낯가림 심한데 패트릭이 편하게 해주셔서 괜찮았어요 !”
 
-편하게 해주기 위해서는 무엇이 필요할까? 배려, 공감, 상냥한 말투 등이 있겠지만 빼놓을 수 없는 두 가지가 있다. 첫 번째는 적극적인 자세이다. 먼저 말을 걸고 먼저 웃고 먼저 눈을 맞춘다. 어렵지 않다. 즉, 방어적인 자세를 풀면 된다. 물론 안다. 어렵지 않다고 말했지만 나도 한때 방어적인 자세를 취한 적이 있다. 많은 연습이 필요했고 행동으로 옮겼다. 그러다 인생 최고의 친구를 만날 수 있었으며 삶이 바뀌었다. 적극적인 자세, 내 삶도 편하게 해준다. 두 번째는 유머이다. 일상 곳곳에 유머가 있다면 장애물을 만났을 때 생각보다 쉽게 넘을 수 있다. 예를 들면, 누군가가 공격적인 말을 했다거나 면접에서 답하기 힘든 질문을 받았을 경우 유머로 넘길 수 있다. 즉, 유머스러운 사람이라는 뜻은 많은 무기를 가지고 있는 것이라 생각한다. 그래서 영어인 유머에 한자를 첨가해보았다. ‘무(無)머스러운 사람보다는 유(有)머스러운 사람이 되자!’. 이번 우테코에서의 한 달 동안, 이 두 가지는 나의 큰 무기가 되어주었다.
+처음 만난 상대를 편하게 해주기 위해서는 무엇이 필요할까? 배려, 공감, 상냥한 말투 등이 있겠지만 빼놓을 수 없는 두 가지가 있다. 첫 번째는 적극적인 자세이다. 먼저 말을 걸고 먼저 웃고 먼저 눈을 맞춘다. 어렵지 않다. 즉, 방어적인 자세를 풀면 된다. 물론 안다. 어렵지 않다고 말했지만 나도 한때 방어적인 자세를 취한 적이 있다. 많은 연습이 필요했고 행동으로 옮겼다. 그러다 인생 최고의 친구를 만날 수 있었으며 삶이 바뀌었다. 적극적인 자세, 내 삶도 편하게 해준다. 두 번째는 유머이다. 일상 곳곳에 유머가 있다면 장애물을 만났을 때 생각보다 쉽게 넘을 수 있다. 예를 들면, 누군가가 공격적인 말을 했다거나 면접에서 답하기 힘든 질문을 받았을 경우 유머로 넘길 수 있다. 즉, 유머스러운 사람이라는 뜻은 많은 무기를 가지고 있는 것이라 생각한다. 그래서 영어인 유머에 한자를 첨가해보았다. ‘무(無)머스러운 사람보다는 유(有)머스러운 사람이 되자!’. 이번 우테코에서의 한 달 동안, 이 두 가지는 나의 큰 무기가 되어주었다.
 
 ### 두 번째 페어(고니) - “패트릭 집이 멀어 체력 소모가 심한 것 같아요. 얼른 이사 와요 !”
 
