docs: Update 우아한테크코스 한 달 생활기.md

--- a/레벨1/우아한테크코스 한 달 생활기.md
+++ b/레벨1/우아한테크코스 한 달 생활기.md
@@ -18,9 +18,9 @@
 
 ### 답이 없는 우테코
 
-말 그대로 우테코에서 정답은 없다. 코치들에게 “이게 맞아요? 저게 맞아요?” 라고 질문하면 기대하던 대답은 얻을 수 없을 것이다. 예를 들어 “프론트엔드에서 MVC 패턴을 쓰는 게 좋을까요?”라고 물어보면 “왜 그런 고민을 하게 되었는지 생각해보세요”라는 답변을 받을 것이다. 나에겐 참 어려운 일이었다. 어렸을 때도 다양한 해석이 존재하는 국어 과목보단 명확한 답이 존재하는 수학이 더 좋았다. 프로그래밍도 input A를 넣으면 output A’ 나온다는 것이 명확했기 때문에 좋았다. 하지만 이제와서 “개발에는 정답이 없다”고 한다. 아무도 나에게 거짓말하진 않았지만 사기당한 기분이었다.
+말 그대로 우테코에서 정답은 없다. 코치들에게 “이게 맞아요? 저게 맞아요?” 라고 질문하면 기대하던 대답은 얻을 수 없을 것이다. 예를 들어 “프론트엔드에서 MVC 패턴을 쓰는 게 좋을까요?”라고 물어보면 예, 아니오의 대답보다는 “왜 그런 고민을 하게 되었는지 생각해보세요”라는 답변을 받을 것이다. 나에겐 참 어려운 일이었다. 어렸을 때도 다양한 해석이 존재하는 국어 과목보단 명확한 답이 존재하는 수학이 더 좋았다. 프로그래밍도 input A를 넣으면 output A’ 나온다는 것이 명확했기 때문에 좋았다. 하지만 이제와서 “개발에는 정답이 없다”고 한다. 아무도 나에게 거짓말하진 않았지만 사기당한 기분이었다.
 
-정답이 없어서 “왜?”를 질문하고 답할 수 있는 사람이 되었다. 주말에 친구들을 만나 보드게임을 했는데 카드에 3~15 사이의 숫자가 적혀있었다. 친구에게 “왜 1, 2는 없어?” 질문했다. 그만큼 이제 이유를 묻는 것이 일상이 되어버렸다. 전에는 코드를 짜도 왜 이렇게 짰냐고 대답할 수 없었다. 남의 코드에도 이유가 있겠거니 하고 굳이 질문하지 않았다. 이젠 납득될 때까지 묻고 답하는 일을 즐기게 되었다.
+하지만 정답이 없어서 “왜?”를 질문하고 답할 수 있는 사람이 되었다. 주말에 친구들을 만나 보드게임을 했는데 카드에 3~15 사이의 숫자가 적혀있었다. 친구에게 “왜 1, 2는 없어?” 질문했다. 그만큼 이제 이유를 묻는 것이 일상이 되어버렸다. 전에는 코드를 짜도 왜 이렇게 짰냐고 대답할 수 없었다. 남의 코드에도 이유가 있겠거니 하고 굳이 질문하지 않았다. 이젠 납득될 때까지 묻고 답하는 일을 즐기게 되었다.
 
 우테코에서 정답이 없는 것이 더 재밌다는 것을 알게 되었다. 정답이 없기 때문에 리뷰어에게 채점을 받는 것이 아닌 서로 설득하는 과정을 경험할 수 있었다. 리뷰어에게 “납득이 되네요.”라는 말을 들었을 때 얼마나 기분이 짜릿하던지 잊히지 않는다.
 
