--- a/레벨1/우아한테크코스 한 달 생활기.md
+++ b/레벨1/우아한테크코스 한 달 생활기.md
@@ -2,11 +2,11 @@
 
 ### 서론 : Time flies
 
-우아한테크코스(이하 우테코)에 들어온 지 벌써 한 달이 조금 넘었다. 합격 결과가 나오고 현업 개발자 지인한테 우테코를 붙었다고 말하니 “10개월이라는 시간은 전혀 만만하지 않다. 버틸 수 있겠냐.”는 답을 들었다. 그땐 나도 그 말에 공감했지만 지내보니 10개월 그렇게 긴 시간은 아닌 것 같다. 수료 전에 다짐했던것들은 다 해보고 싶다.
+우아한테크코스(이하 우테코)에 들어온 지 벌써 한 달이 조금 넘었다. 합격 결과가 나오고 현업 개발자 지인한테 우테코를 붙었다고 말하니 “10개월이라는 시간은 전혀 만만하지 않다. 버틸 수 있겠냐.”는 답을 들었다. 그땐 나도 그 말에 공감했지만 지내보니 10개월이 그렇게 긴 시간은 아닌 것 같다. 수료 전에 다짐했던 것들은 다 해보고 싶다.
 
 ### 내향인의 적응기
 
-평소 MBTI 검사를 하면 I(내향) 비율이 70% 이상이 나온다. 편안한 환경이 조성되고 적응이 되면 더 이상 그 밖으로 나가고 싶지 않아 한다. 즉, 새로운 사람을 만나기 어려워한다. 하지만 우테코는 이런 나와 정반대의 생활을 권장한다. 
+평소 MBTI 검사를 하면 I(내향) 비율이 70% 이상이 나온다. 편안한 환경이 조성되고 적응을 하면 더 이상 그 밖으로 나가고 싶지 않아 한다. 즉, 새로운 사람을 만나기 어려워한다. 하지만 우테코는 이런 나와 정반대의 생활을 권장한다. 
 
 시작은 연극이었다. 내가 일반적인 삶을 살았더라면 눈길도 주지 않을 분야다. 우리 조에는 내향인 5명과 외향인 1명으로 구성되었는데, 첫날 같이 초밥을 먹을 때 흐르던 정적이 아직도 기억난다. 무대에 서는 것과 새로운 사람들을 만나는 것, 두 가지 난관이 겹쳤다.
 
@@ -18,7 +18,7 @@
 
 ### 답이 없는 우테코
 
-말 그대로 우테코에서 정답은 없다. 코치들에게 “이게 맞아요? 저게 맞아요?” 라고 질문하면 기대하던 대답은 얻을 수 없을 것이다. 예를 들어 “프론트엔드에서 MVC 패턴을 쓰는 게 좋을까요?”라고 물어보면 예, 아니오의 대답보다는 “왜 그런 고민을 하게 되었는지 생각해보세요”라는 답변을 받을 것이다. 나에겐 참 어려운 일이었다. 어렸을 때도 다양한 해석이 존재하는 국어 과목보단 명확한 답이 존재하는 수학이 더 좋았다. 프로그래밍도 input A를 넣으면 output A’ 나온다는 것이 명확했기 때문에 좋았다. 하지만 이제와서 “개발에는 정답이 없다”고 한다. 아무도 나에게 거짓말하진 않았지만 사기당한 기분이었다.
+말 그대로 우테코에서 정답은 없다. 코치들에게 “이게 맞아요? 저게 맞아요?” 라고 질문하면 기대하던 대답은 얻을 수 없을 것이다. 예를 들어 “프론트엔드에서 MVC 패턴을 쓰는 게 좋을까요?”라고 물어보면 예, 아니오라는 대답보다는 “왜 그런 고민을 하게 되었는지 생각해보세요”라는 답변을 받을 것이다. 나에겐 참 어려운 일이었다. 어렸을 때도 다양한 해석이 존재하는 국어 과목보단 명확한 답이 존재하는 수학이 더 좋았다. 프로그래밍도 input A를 넣으면 output A’ 나온다는 것이 명확했기 때문에 좋았다. 하지만 이제 와서 “개발에는 정답이 없다”고 한다. 아무도 나에게 거짓말하진 않았지만 사기당한 기분이었다.
 
 하지만 정답이 없어서 “왜?”를 질문하고 답할 수 있는 사람이 되었다. 주말에 친구들을 만나 보드게임을 했는데 카드에 3~15 사이의 숫자가 적혀있었다. 친구에게 “왜 1, 2는 없어?” 질문했다. 그만큼 이제 이유를 묻는 것이 일상이 되어버렸다. 전에는 코드를 짜도 왜 이렇게 짰냐고 대답할 수 없었다. 남의 코드에도 이유가 있겠거니 하고 굳이 질문하지 않았다. 이젠 납득될 때까지 묻고 답하는 일을 즐기게 되었다.
 
@@ -28,6 +28,6 @@
 
 개발을 시작하면서 항상 남들과 비교를 해왔다. 누군가 새로운 기술을 쓰고 있다면 나도 써야 할 것 같았고, 누군가 동아리에 들어갔다면 나도 들어가야 할 것 같았다. 하지만 비교는 나를 갉아먹을 뿐이었다.
 
-우테코에 들어오면서는 절대 비교하지 않으리라 다짐했다. 누군가 나보다 잘한다면, 나에게 성장의 기회를 줘서 고맙다고 생각해야겠다고 매일 생각한다. 
+우테코에 들어오면서는 절대 비교하지 않으리라 다짐했다. 누군가 나보다 잘한다면 나에게 성장의 기회를 줘서 고맙다고 생각해야겠다고 매일 생각한다. 
 
 스스로를 의심하지 않기. 남의 페이스에 흔들리지 않고 내 길을 따라 달리기. 우테코에서의 0번째 목표이다. 완주까지 내 목표가 흔들리지 않기를 바란다.
