--- a/깃짱의한달생활기.md
+++ b/깃짱의한달생활기.md
@@ -43,6 +43,6 @@
 지금 정리하지 않으면 지나간 지식은 익숙해져서 어떤 것을 설명해야 하는지조차 모르게 되기 때문이다. 
 
 앞으로 계속해서 규칙적인 생활을 하면서 멘탈 관리 측면에서도 노력할 것이다. 
-나 자신에 대한 평가는 절대평가로 갈 텐데, 내 눈에 지난 미션보다 나아졌다면 통과로 하기로 했다. 
+나 자신에 대한 평가는 절대평가로 가고, 내 눈에 지난 미션보다 나아졌다면 통과로 하기로 했다. 
 우테코는 모두가 같은 미션에 대한 코드를 작성하다 보니 비교하기가 쉽다. 
 나는 프리 코스 첫날 자바를 시작한 만큼 백엔드에서 자바 경력이 가장 짧으니 좀 더 열심히 노력해야 겠다! 
