--- a/우아한 테크코스 한달 생활기.md
+++ b/우아한 테크코스 한달 생활기.md
@@ -1,10 +1,12 @@
-## 우테코 Level1 한달 생활기.
+## 과거는 갔고 미래는 몰라. 그러니 오늘도 열심히 해야지.
 
-정처 없이 쫓기고 있었다. 무엇으로부터 그렇게 도망쳐 왔던 걸까? 나에 대한 의심은 계속되는 낙방으로 인해 깊어져만 갔다. 이 길이 맞을까? 그래도 2년 넘게 공부해 왔는데 이걸 포기하는 게 너무 아까웠다. “뭐가 됐든 끝을 보고 그만두자”, “남들 별로 안 부럽다”, “나는 나만의 길을 간다.” 이런 말들로 스스로를 끝없이 달래봤지만 그건 나를 보호하기 위한 방어기제였을 뿐, 포기에도 용기가 필요한데 그러기에 나는 너무 겁쟁이였다.
+정처 없이 쫓기고 있었다. 무엇으로부터 그렇게 도망쳐 왔던 걸까? 나에 대한 의심은 계속되는 낙방으로 인해 깊어져만 갔다. 이 길이 맞을까? 그래도 2년 넘게 프로그래밍 공부를 해 왔는데 이걸 포기하는 게 너무 아까웠다.
 
-계속해서 불안에 쫓기고 있던 때 우테코 지원에 관한 공고를 봤다. 작년에 지원했다가 한번 떨어진 적이 있어서 이번에도 떨어지면 자존감에 많은 상처를 입을 것 같아서 선뜻 지원하기 무서웠다. 하지만, 지원조차 하지 않으면 후회할 것 같아서 떨어진다면 그냥 눈을 많이 낮춰서라도 취업 하자 라고 생각해서 우테코에 지원했다. 지난날에 대한 보답인지 운이 좋은 건지 아니면 둘 다인지 우테코에 합격했다.
+“뭐가 됐든 끝을 보고 그만두자”, “남들 별로 안 부럽다”, “나는 나만의 길을 간다.” 이런 말들로 스스로를 끝없이 달래봤지만 그건 방어기제였을 뿐, 포기에도 용기가 필요한데 그러기에 나는 너무 겁쟁이였다.
 
-우테코 생황을 시작한지 한 달이 조금 넘게 시간이 흘렀고 내가 느낀 감정들에 대한 소회를 적어보고자 한다.
+계속해서 불안에 쫓기고 있던 때 우테코 지원 공고를 봤다. 작년에 지원했다가 떨어진 적이 있어서 이번에도 떨어지면 자존감에 많은 상처를 입을 것 같아 선뜻 지원하기 무서웠다. 하지만, 지원조차 하지 않으면 후회할 것 같아서 지원했고, 지난날에 대한 보답인지 운이 좋은 건지 아니면 둘 다인지 우테코에 합격했다.
+
+우테코 생황을 시작한 지 한 달이 조금 넘게 시간이 흘렀고 내가 느낀 감정들에 대한 소회를 적어보고자 한다.
 
 보통 “교육”이라고 하면 학교 강의처럼 1시간 강의 10분 휴식과 같은 방식으로 주입식 교육을 생각한다. 하지만 우테코에서는 좀 다르다. 내가 느낀 우테코의 특징은 다음과 같다.
 
@@ -18,7 +20,7 @@
 
 ## 미션
 
-어느 정도 가이드라인을 주고 기한 내에 미션을 제출하면 된다. 미션의 진행 방식은 약간 특이한데 `페어 프로그래밍`을 통해서 미션을 진행한다. 예전에 창업 활동을 하면서 페어 프로그래밍에 대해 들은 적이 있다. 하지만, 당시 팀에는 개발자가 3명 밖에 없고 각자 하는 분야가 달랐기 때문에 적용해 보지는 못하고 입맛만 다신 기억이 있다. 근데 그 페어 프로그래밍을 바라던 곳에서 하다니… 뭔가 기분이 이상하면서 “잘 왔구나”라고 다시 한번 생각했다.
+우테코에서 미션 진행에 대한 가이드라인과 요구사항을 제공하고 크루원들은 기한 내에 미션을 제출하면 된다. 미션의 진행 방식은 약간 특이한데 `페어 프로그래밍`을 통해서 미션을 진행한다. 예전에 창업 활동을 하면서 페어 프로그래밍에 대해 들은 적이 있다. 하지만, 당시 팀에는 개발자가 3명 밖에 없고 각자 하는 분야가 달랐기 때문에 적용해 보지는 못하고 입맛만 다신 기억이 있다. 근데 그 페어 프로그래밍을 바라던 곳에서 하다니… 뭔가 기분이 이상하면서 “잘 왔구나”라고 다시 한번 생각했다.
 
 ## 소프트 스킬
 
@@ -30,11 +32,11 @@
 
 나는 글쓰기를 좋아한다. 말은 한번 뱉으면 줍지 못하는데, 글을 그렇지 않다. 본인이 원하는 만큼 퇴고를 하고 작성할 수 있다. 말에는 뒤로가기가 없지만, 글에는 뒤로가기가 있다.
 
-먼저 원활한 소통을 위해서는 논리적으로 나의 주장을 이야기할 줄 알아야 한다. 나의 주장을 펼치는 데에는 훈련이 필요하고 뒤로가기가 가능한 글쓰기는 논리적 주장의 시작점이라 생각한다. 말하기는 습관이다. 그리고 말하기는 입으로 뱉는 것도 중요하지만 내가 많이 사용한 표현에서 기인한다.
+원활한 소통을 위해서는 논리적으로 나의 주장을 이야기할 줄 알아야 한다. 말하기는 습관이다. 그리고 입으로 뱉는 말들은 내가 많이 사용한 표현에서 기인한다. 습관을 만드는 데에는 충분한 훈련이 필요하고 뒤로가기가 가능한 글쓰기는 그 훈련에 적합하다.
 
-평소에 내가 주장하는 바를 얼마나 논리적으로 부드럽게 이야기하기 위해서는 연습이 필요하고 평소에 어떤 생각을 하는지 의식적으로 작성을 하다 보면 자신의 평소 생각은 말하기에서 자연스럽게 나온다. 그렇게 쌓아 온 습관은 자신의 의견을 명확하게 전달하는 데 도움이 된다.
+평소에 내가 주장하는 바와 평소에 어떤 생각을 하는지 의식적으로 작성을 하다 보면 자신의 주장을 말하는 데에서 자연스럽게 나온다. 그렇게 쌓아 온 습관은 자신의 의견을 명확하게 전달하는 데 도움이 된다.
 
-글쓰기를 할 때 주로 회고를 많이 한다. 짧은 주기의 피드백을 통해 그 기간 내가 어떤 것을 성취했고 어떤 것이 아쉬운지에 대해 객관적으로 바라봐야 성장이 있기 떄문이다. 또한 내가 미션을 진행하면서 배운 것들에 대해 학습 로그를 남기기도 한다. 다른 사람이 보게 되는 글이라 좀 더 신경 써서 작성할 수밖에 없다.
+글쓰기는 주로 회고를 한다. 짧은 주기의 피드백을 통해 그 기간 내가 어떤 것을 성취했고 어떤 것이 아쉬운지에 대해 객관적으로 바라봐야 성장이 있기 떄문이다. 또한 내가 미션을 진행하면서 배운 것들에 대해 학습 로그를 남기기도 한다. 다른 사람이 보게 되는 글이라 좀 더 신경 써서 작성할 수밖에 없다.
 
 ---
 
@@ -42,9 +44,9 @@
 
 번외로, 회고에 대한 안내를 들으면서 “이거다” 싶었던 것은 바로 `감정 회고`였다. 함께 미션을 진행한 페어와 감정적으로 내가 어떻게 느꼈는지에 대해 이야기하는 것이다. 함께 일을 한 사람들 끼리 기술적인 회고가 아닌, 함께 일을 하면서 느낌 감정들에 대한 회고를 하는 방법을 듣고 가슴 한편이 미어졌다.
 
-창업 활동을 하면서 사실 팀원들에게 마음을 툭 터놓고 이야기를 해본 적이 많지 않다. 하나의 작은 오해가 있어도, 굳이 이런 일로 얼굴 붉히고 싶지 않다는 생각에 “좋은 게 좋은 거지” 하고 넘어간 적이 두번이 아니다. 그리고 그 “작은 오해”라는 날갯짓은 나중에 걷잡을 수 없이 큰 태풍이 되어 서로의 신뢰를 금가게 만들었다.
+창업 활동을 하면서 팀원들에게 마음을 툭 터놓고 이야기를 해본 적이 많지 않다. 하나의 작은 오해가 있어도, 굳이 이런 일로 얼굴 붉히고 싶지 않다는 생각에 “좋은 게 좋은 거지” 하고 넘어간 적이 한두번이 아니다. 그리고 그 “작은 오해”라는 날갯짓은 나중에 걷잡을 수 없이 큰 태풍이 되어 서로의 신뢰를 금가게 만들었다.
 
-그때, 오해를 바로 풀었다면 지금은 달랐을까? 그 오해가 아니어도, 결과적으로 창업팀이 해체되기는 했겠지만 그렇게 불편한 감정으로 남아있지는 않을 것 같다는 생각이 든다.
+그때, 오해를 바로 풀었다면 지금은 달랐을까? 그 오해가 아니어도, 결과적으로 창업팀이 해체되기는 했겠지만 그렇게 불편한 감정으로 남아있지는 않을 것 같다.
 
 공부는 평생 해야 한다. 하지만 지금까지 나의 학습 방법은 너무 날 것이었다. 앞만 보고 달리며 뒤는 돌아보지 않는다. 그리고 같은 문제를 마주쳤을 때 똑같이 검색해본다.
 
