docs: 우아한테크코스 한 달 생활기 수정

--- a/우아한테크코스 한 달 생활기.md
+++ b/우아한테크코스 한 달 생활기.md
@@ -7,7 +7,7 @@
 
 *“연극을 하게 될 거예요.”*
 
-처음 보는 사람들 앞에서 처음 보는 사람들과 연극을 한다. 예정된 일을 듣기만 했을 뿐이었는데 이미 연극을 한 사람처럼 부끄러워했었다. 현실을 부정하기도 했다. 그러다 ‘어차피 다 비전공자일텐데 뭐 어때’라는 생각이 들었다. 이미 엎질러진 물, 즐기려고 했다. 부담을 가지지 않으려고 했다. 연기 실력을 보려고 하는 게 아니니까.
+처음 보는 사람들 앞에서 처음 보는 사람들과 연극을 한다. 예정된 일을 듣기만 했을 뿐이었는데 이미 연극을 한 사람처럼 부끄러워했었다. 현실을 부정하기도 했다. 그러다 ‘어차피 연극과는 없을 텐데 뭐 어때’라는 생각이 들었다. 이미 엎질러진 물, 즐기려고 했다. 부담을 가지지 않으려고 했다. 연기 실력을 보려고 하는 게 아니니까.
 
 연극 조, 즉 온보딩 조가 정해지고 첫날 다 같이 초밥을 먹으러 갔을 때가 아직도 기억난다. 그날 먹었던 초밥은 정말 맛이 없었지만, 그게 문제가 아니었다. 어색해서 초밥이 어디로 들어가는지, 앞 사람이 실수로 초밥을 간장에 빠뜨렸는지도 모른 채 밥을 먹었다. 또 궁금하진 않지만, 뭐라도 말해야 할 것 같아 하는 질문― MBTI 등 ―을 서로에게 물어보며 얼어붙은 분위기를 풀려고 했었다.
 
