--- a/우테코_한달_생활기.md
+++ b/우테코_한달_생활기.md
@@ -1,47 +1,45 @@
-
 # 우테코 한달 생활기 - 이오
 
 
 ### 새로운 생활
 
-내가 하고 싶은 게 뭘까? 난 뭘 해야 할까? <br>
-이 두 가지 질문이 내가 우아한 테크 코스에 참가하게 만들었다. <br>
-학교를 다니면서 꿈을 가지고 연구실을 다녔다. 하지만 어느 순간부터 새로운 것을 배우지 않게 되었다.  <br>
-내가 이미 할 줄 아는 것들로 반복적인 일 만을 수행할 뿐이었다. 더 이상 연구가 즐겁지 않았고, 매너리즘에 빠졌다.  <br>
+내가 하고 싶은 게 뭘까? 난 뭘 해야 할까?   
+이 두 가지 질문이 내가 우아한테크코스에 참가하게 만들었다.   
+학교를 다니면서 꿈을 가지고 연구실을 다녔다. 하지만 어느 순간부터 새로운 것을 배우지 않게 되었다.    
+내가 이미 할 줄 아는 것들로 반복적인 일 만을 수행할 뿐이었다. 더 이상 연구가 즐겁지 않았고, 매너리즘에 빠졌다.    
 자연스럽게 이제는 새로운 꿈을 찾아야 할 때임을 느꼈다. 운이 좋게도 우테코에 참여하게 되었고, 새로운 생활을 시작했다.
 
- <br>
+   
  
 ### 첫 프로젝트, 연극
 
-약간의 걱정과 상당한 설렘을 안고 시작한 새로운 생활은 예상치 못한 프로젝트로 시작되었다. <br>
-아마 상당수의 크루가 당황했을 첫 프로젝트, 연극. <br>
-극히 내향적인 성격을 가진 사람에게, 그나마 있던 사회성까지 코로나 기간 동안 퇴화한 상태에서, 낯선 환경, 낯선 사람들 사이에서 연극을 준비하라니! <br>
-연극 준비하고, 페어 프로그래밍하고, 하루 온종일 에너지를 쏟아내고 집에 도착하면 기절하기를 반복한 첫 주였다. <br>
-그래도 돌이켜 보니 다행인 사실은, 나만 어색했던 것은 아니라는 것이었다. 그리고 같은 조의 크루들이 좋은 사람들이었다는 것이다. <br>
-모두가 어색한 상황에서 더 어색한 미션을 수행하다 보니 오히려 빠르게 친해질 수 있었다. <br>
+약간의 걱정과 상당한 설렘을 안고 시작한 새로운 생활은 예상치 못한 프로젝트로 시작되었다.   
+아마 상당수의 크루가 당황했을 첫 프로젝트, 연극.   
+극히 내향적인 성격을 가진 사람에게, 그나마 있던 사회성까지 코로나 기간 동안 퇴화한 상태에서, 낯선 환경, 낯선 사람들 사이에서 연극을 준비하라니!   
+연극 준비하고, 페어 프로그래밍하고, 하루 온종일 에너지를 쏟아내고 집에 도착하면 기절하기를 반복한 첫 주였다.   
+그래도 돌이켜 보니 다행인 사실은, 나만 어색했던 것은 아니라는 것이었다. 그리고 같은 조의 크루들이 좋은 사람들이었다는 것이다.   
+모두가 어색한 상황에서 더 어색한 미션을 수행하다 보니 오히려 빠르게 친해질 수 있었다.   
 
- <br>
+   
  
 ### 한달간의 적응
 
-한 달 동안 바쁘게 살아가면서 시간은 빠르게 흘러갔다. <br>
-인사하고 지내는 크루들이 늘어났다. 규칙적인 생활에도 익숙해졌다. 페어와 프로그래밍을 하고 리뷰를 받는 것에도 적응했다. <br>
-점점 여유를 찾았고, 다음 단계를 고민하기 시작했다. <br>
-첫 주에 나에게 가장 부족했던 것은 체력이었다. 어떤 일이든 체력이 부족하면 아무것도 할 수 없다.  <br>
+한 달 동안 바쁘게 살아가면서 시간은 빠르게 흘러갔다.   
+인사하고 지내는 크루들이 늘어났다. 규칙적인 생활에도 익숙해졌다. 페어와 프로그래밍을 하고 리뷰를 받는 것에도 적응했다.   
+점점 여유를 찾았고, 다음 단계를 고민하기 시작했다.   
+첫 주에 나에게 가장 부족했던 것은 체력이었다. 어떤 일이든 체력이 부족하면 아무것도 할 수 없다.    
 꾸준히 산책을 하고, 한 끼 정도는 건강한 음식을 먹자고 결심했다. 규칙적인 생활에서 오는 성취는 참 오랜만에 느끼는 즐거움이었다.
 
- <br>
+   
  
 ### 열정에 관하여
 
-어떻게 이렇게 사람을 잘 뽑을 수 있을까? <br>
-우테코에 참여하면서 가장 많이 떠올렸던 질문이다. <br>
-분명 코드와 한두 장 분량의 글만 보고 크루를 뽑았을 텐데. 놀랍게도 내가 만난 모든 크루들은 친절했고, 열정이 넘쳤다. <br>
-요즘의 나는 열정이 적은 사람이라고 생각했다. 정확히는, 내 스스로 열심히 할 힘을 잃은 상태라고 생각했다.  <br>
-또한, 스스로 비열이 높은 사람이라 여겼기 때문에 주변의 감정에 영향을 받지도 않을 것이라고 생각했다. <br>
-하지만 여기서 만난 사람들이 가진 열정은 더 대단했다. 꿈을 가지고 코스에 참가한 크루들은 상상한 것 이상의 에너지를 갖고 있었다. <br>
-한 명 한 명 만나고, 이야기하고, 함께 코드를 짜고. 크루들과 함께 시간을 보내는 사이 열정은 어느새 나에게도 전해져 있었다. <br>
+어떻게 이렇게 사람을 잘 뽑을 수 있을까?   
+우테코에 참여하면서 가장 많이 떠올렸던 질문이다.   
+분명 코드와 한두 장 분량의 글만 보고 크루를 뽑았을 텐데. 놀랍게도 내가 만난 모든 크루들은 친절했고, 열정이 넘쳤다.   
+근래 나는 열정이 적은 사람이라고 생각했다. 정확히는, 내 스스로 열심히 할 힘을 잃은 상태라고 생각했다.    
+또한, 스스로 비열이 높은 사람이라 여겼기 때문에 주변의 감정에 영향을 받지도 않을 것이라고 생각했다.   
+하지만 여기서 만난 사람들이 가진 열정은 더 대단했다. 꿈을 가지고 코스에 참가한 크루들은 상상한 것 이상의 에너지를 갖고 있었다.   
+한 명 한 명 만나고, 이야기하고, 함께 코드를 짜고. 크루들과 함께 시간을 보내는 사이 열정은 어느새 나에게도 전해져 있었다.   
 
-한 달이라는 시간은 꽤나 짧은 시간이다. <br>
-그 짧은 시간에서조차도 바뀐 스스로를 돌아보면, 앞으로의 시간을 더 기대해 보고 싶다. <br>
+한 달이라는 시간은 꽤나 짧은 시간이다. 그 짧은 시간에서조차도 바뀐 스스로를 돌아보니, 앞으로의 시간을 더 기대해 보고 싶다.   
