--- a/우아한 테크코스 한달 생활기.md
+++ b/우아한 테크코스 한달 생활기.md
@@ -6,7 +6,7 @@
 
 계속해서 불안에 쫓기고 있던 때 우테코 지원 공고를 봤다. 작년에 지원했다가 떨어진 적이 있어서 이번에도 떨어지면 자존감에 많은 상처를 입을 것 같아 선뜻 지원하기 무서웠다. 하지만, 지원조차 하지 않으면 후회할 것 같아서 지원했고, 지난날에 대한 보답인지 운이 좋은 건지 아니면 둘 다인지 우테코에 합격했다.
 
-우테코 생황을 시작한 지 한 달이 조금 넘게 시간이 흘렀고 내가 느낀 감정들에 대한 소회를 적어보고자 한다.
+우테코 생활을 시작한 지 한 달이 조금 넘게 시간이 흘렀고 내가 느낀 감정들에 대한 소회를 적어보고자 한다.
 
 보통 “교육”이라고 하면 학교 강의처럼 1시간 강의 10분 휴식과 같은 방식으로 주입식 교육을 생각한다. 하지만 우테코에서는 좀 다르다. 내가 느낀 우테코의 특징은 다음과 같다.
 
