--- a/레벨2_몰입.md
+++ b/레벨2_몰입.md
@@ -19,9 +19,9 @@
 난 놀기를 좋아하는 쾌활한 아이일 뿐이었다.
 
 그런 내가 한 친구를 만났다. 예쁘장한 외모에 상냥했던 그 친구는
-가수가 되기를 꿈꾸고 있었고, 옆동네까지 가서 보컬학원을 다니고 있었다.
+가수가 되기를 꿈꾸고 있었고, 옆 동네까지 가서 보컬학원을 다니고 있었다.
 
-왜이지는 몰라도 난 그 친구를 동경했고 종일 따라다녔다.
+왜인지는 몰라도 난 그 친구를 동경했고 종일 따라다녔다.
 결국 부모님을 졸라 그 친구가 다니는 학원에 취미 보컬 수업을 등록하게 되었다.
 
 노래는 정말 재미있었다. 친구와 나는 매일 연습하러 학원에 갔고, 레슨 선생님께서는 우리를 예뻐라하셨다.
@@ -33,14 +33,11 @@
 하루는 학교 음악선생님께서 내 친구를 불러 근처의 남학교에서 뮤지컬을 하는데,
 여학생을 모집하고 있다며 뮤지컬 동아리에 들어가볼 것을 추천해주셔서 오디션을 보고 배역을 배정받았다.
 실용음악과는 다른 세계였다. 특히 몸치인 나에게 춤은 참 힘들었고 열심히 한다고 잘하게 되는 것도 아니라는 쓴 교훈을 얻기도 했다.
-틈만나면 악보와 대본을 봤고, 어디가서 의자에 앉기만 하면 탭댄스를 연습했다.
+조금이라도 나아지기 위해서는 틈만나면 악보와 대본을 봤고, 앉아 있을 때도 탭댄스를 연습해야했다.
 
-이때 처음으로
-친구보다,
-땀 흘리며 춤추고 뛰면서 노래를 부르는 '나'에게
-더 집중해본 것 같다.
+이때 처음으로 친구보다 나 스스로에게 집중해본 것 같다.
+좋았다. 친구가 없어도 온전히 집중하고 나아갈 수 있는 건 흥분되는 일이었다.
 
-좋았다. 친구가 없어도 온전히 집중하고 나아갈 수 있는 나의 모습이 자랑스러웠다.
 뮤지컬을 핑계로, 학원은 그만두고 공부도 아예 접어 말 안듣는 사춘기 역할을 톡톡히 해냈다.
 하지만, 뮤지컬 동아리에서만큼은 우등생이었다.
 
@@ -50,8 +47,7 @@
 땀을 무지하게 흘리다 바닥에 기절해있으면
 친구들이 터덜터덜 컵밥을 사왔고 그걸 먹고 다시 연습했다.
 재밌었는데.
-
-나에게 뮤지컬은 처음으로 몰입한 행위, 첫사랑 같은 것.
+나에게 뮤지컬은 처음으로 몰입한 행위, 첫사랑 같은 것이다.
 
 ---
 
@@ -60,36 +56,47 @@
 내가 다시 또 몰입할 수 있는 것을 찾을 수 있을 것 같았다.
 그렇게, 가장 눈앞에 있는 가장 만만한 것인 학교 공부에 몰입하기를 도전했던 것 같다.
 
-
 지금까지 내가 좋아했던 것들은 전부 다 그랬다. 프로그래밍도 별반 다르지 않았다.
 내가 프로그래밍을 계속 해야겠다고 느꼈던 것은 그리 특별한 계기가 아니었다.
-스물한 살의, 학교에서 c 언어를 배우고 있던 나와 친구들은
-너도나도 나간다는 해커톤에 등떠밀려 나갔고,
-새내기 때 놀기만 했던 우리는
-어떻게든 우리의 작품이 굴러가게 만들기 위해 머리를 싸맸다.
 
-아무도 우리에게 잘하라고 시키지 않았다.
-나 스스로 하고싶고 보고싶고 이야기하고 싶어한다는 걸 자각했을 때,
-그 때 난 또 몰입할 것을 찾았다는 흥분감에 휩싸이며
-다가오지도 않은 미래에 설렘을 느꼈다.
+인생 최고 '노잼' 시기였던 스물 한 살의 여름.
+원격으로 학교 수업을 듣곤 했는데 책상에 앉기만하면 눕고싶고
+눕지 않고 강의를 듣는다 해도 대충 필기만 하고 머리에서 휘발시켰다.
 
-그렇게 여기까지 왔다.
+하루는 누워서 낮잠을 자다가 전화가 와서 받아보니
+친구가 해커톤에 나가자고 해서 잠이 덜 깬채로 그러자고 했다.
+앞으로 무슨 폭풍이 일어날지도 모르고 그냥 다시 잤다.
+
+해커톤은 3일밖에 주어지지 않았고, 아무 경험도 없던 우리에게는 더 짧은 시간이었다.
+시간 내에 어떻게든 굴러가게 만들기 위해서는 날 혹사시켜야했지만 그럼에도 즐거웠던 것 같다.
+
+
+> 자기효능감
+> 
+> 주어진 과제나 일을 성공적으로 수행할 수 있다는 자신 의 능력에 대한 믿음
+> 
+
+살면서 이 정도 자기효능감을 가지고 일에 임했던 적은 없었다.  
+비슷한 사람을 많이 봤는데, 나도 샤워하는 시간 밥먹는 시간을 쪼개 컴퓨터를 만지작 거렸다.
+이정도 책임감도 느껴본 적이 없었다. 별 생각 없이 받아들인 제안이었지만, 어느샌가 내가 팀을 이끌고 있었다.
+
+다시 몰입할 것을 찾았다는 흥분감과 안도감을 가장 최근 느낀 것이 이때였고,
+다가오지도 않은 미래에 설렘을 느꼈고, 그렇게 여기까지 왔다.
 
 ---
 
-가끔은 내가 몰입할 행위를 영영 잃어버릴까 무서웠다.
+하지만 지금도 내가 몰입할 행위를 영영 잃어버릴까 무섭다.
 
 솔직히 난 우테코 생활 중에도 몰입하지 못하는 때가 있었고
-그럴 때마다 난 한없이 작아졌다. 그래도 훌훌 털고 일어나보곤했는데
-그게 가능했던 이유는,
-
+그럴 때마다 난 한없이 작아졌다.
+그럴 땐 생각을 바꿔야한다.
 
 흘러가는 대로 살아가다가도,
-우연히 만나는 모든 것들에 '몰입' 이란 도전장을 내밀던 나였기에
+우연히 만나는 모든 것들에 몰입이라는 도전장을 내밀던 나였기에
 
-> 나라면 다시금 몰입할 수 있을거야
+'나라면 다시금 몰입할 수 있을거야'
 
-하고 넘길 수 있는 사람이 되었기 때문인 것 같다.
+믿어보는 것이다.
 
 ---
 
@@ -98,8 +105,8 @@
 하지만 모든 몰입이 다 성공적일 수 없고, 만족스러울 수도 없다.
 긍정적인 피드백을 받지못한 우리는 다시 몰입하기 힘들어질 수 있다.
 
-또 다른 문제. 나는 너무도 평범해서 그 어떤 것도 평생을 최선을 다해 몰입하기는 쉽지 않을 것 같다.
-그렇다면 우리는 어떻게 다시 몰입을 도전해야할까?
+또 다른 문제. 나는 성격상 그 어떤 것도 평생을 최선을 다해 몰입하기는 쉽지 않을 것 같다.
+그렇다면, 몰입이 어려워질 때 어떻게 극복해낼 것인가?
 
 난 내가 몰입할 수 있는 다른 것들을 만들어보려고 한다.
 취미와 운동은 이에대한 훌륭한 답이 되어줄 것이다.
@@ -111,14 +118,18 @@
 
 근본적인 해결책은 아니라고 할 수도 있다.
 맞다. 그러니까 속이기라도 해보자는 것이다.
-내가 쉽게 성취감을 만들었고, 그 성취감으로 뇌를 속여, 감각을 환기하고
+
+인위적으로라도 성취감을 만들었고,
+그 성취감으로 뇌를 속여, 감각을 환기하고
 몰입할 힘을 만들어준다.
 
 내가 공부에 지쳤을 때, 목적을 잃었을 때
 노래를 하고 연기를 하며 몰입할 수 있는 힘을 길렀다.
-더 커진 힘으로 또 새로운 것을 찾아나섰는가? 아니.
-내가 다시 마주하게 된, 내 앞의 놓인 공부에 다시 몰입해볼 수 있었다. 
+더 커진 힘으로 마냥 새로운 것을 찾아나섰던 것이 아니다.
+내가 다시 마주하게 된, 내 앞의 놓인 '공부'에 다시 몰입해볼 수 있었다.
 
-한번 몰입해봤던 것, 내가 사랑했던 일들은 언제나 나의 편이라는 것을 잊지말고 잘 활용해보자.
-그를 위해서는, 만나게 될 모든 기회에 최선을 다하고 몰입을 시도해보자.
+그러니 지금 당장 몰입이 어렵더라도
+한번 몰입해봤던 것, 내가 사랑했던 일들은
+언제나 내가 다시 몰입할 수 있다는 확신을 가질 것이다.
+그를 위해 만나게 될 모든 기회에 최선을 다하고 몰입을 시도해야지.
 누가 또 내 편이 되어줄지 모르니!
