--- a/레벨2_몰입.md
+++ b/레벨2_몰입.md
@@ -1,84 +1,84 @@
 # 처음만 어려운 몰입
 
-크루라면 누구나 한번쯤 몰입에 대해 고민해봤겠지만,
-얼마전 인간의 뇌는 몰입을 하게되면 즐거움을 느낀다는 사실을 알고 나서부터
-몰입에 대한 관심이 부쩍 많아졌다.
+크루라면 누구나 한 번쯤 몰입에 대해 고민해봤겠지만,
+얼마 전 인간의 뇌는 몰입을 하게 되면 즐거움을 느낀다는 사실을 알고 나서부터
+몰입에 관한 관심이 부쩍 많아졌다.
 
 난 몰입경험이 손을 꼽아서, 인생 전체를 돌아보면
 뭐 대부분은 입문만 하고 끝나거나, 최선을 다하지 않은 일들도 많았다.
 새로운 지식과 여러 분야에 호기심이 많은 성격을 가진 탓에 그런 것 같다.
 
-이십 몇 년 대부분을 공부를 하는 역할로 지냈고 지금도 그렇다.
+이십몇 년 대부분을 공부하는 역할로 지냈고 지금도 그렇다.
 나에게 공부는 몰입 대상인 적도 있지만 아닐 때가 더 많았다.
-많은 사람들이, 자의든 타의든 오랜 시간 몰입을 강요받는 것이 공부 아닐까? 
-확실히 공부를 하고싶어서 시작하지는 않았다.
+많은 사람이, 자의든 타의든 오랜 시간 몰입을 강요받는 것이 공부 아닐까?
+확실히 공부를 하고 싶어서 시작하지는 않았다.
 
-난 초등학교 때부터 학원을 다녔는데, 그래서인지 학교 시험을 잘 보는 것은 쉬운 일이었다.
-그렇게 어른들에게 칭찬 받는 것은 뿌듯하고 좋았다.
-하지만 그 때의 내가 학원에 다녔던 이유는 혼나지 않기 위해서 또는 학원에 있는 친구랑 놀기 위함이었다.
+난 초등학교 때부터 학원에 다녔는데, 그래서인지 학교 시험을 잘 보는 것은 쉬운 일이었다.
+그렇게 어른들에게 칭찬받는 것은 뿌듯하고 좋았다.
+하지만 그때의 내가 학원에 다녔던 이유는 혼나지 않기 위해서 또는 학원에 있는 친구랑 놀기 위함이었다.
 난 놀기를 좋아하는 쾌활한 아이일 뿐이었다.
 
 그런 내가 한 친구를 만났다. 예쁘장한 외모에 상냥했던 그 친구는
-가수가 되기를 꿈꾸고 있었고, 옆 동네까지 가서 보컬학원을 다니고 있었다.
+가수가 되기를 꿈꾸고 있었고, 옆 동네까지 가서 보컬학원에 다니고 있었다.
 
 왜인지는 몰라도 난 그 친구를 동경했고 종일 따라다녔다.
 결국 부모님을 졸라 그 친구가 다니는 학원에 취미 보컬 수업을 등록하게 되었다.
 
-노래는 정말 재미있었다. 친구와 나는 매일 연습하러 학원에 갔고, 레슨 선생님께서는 우리를 예뻐라하셨다.
+노래는 정말 재미있었다. 친구와 나는 매일 연습하러 학원에 갔고, 레슨 선생님께서는 우리를 예뻐라 하셨다.
 매일 연습실을 나가고 연습하는 대로 일취월장하니
 일 년 정도 지났을까, 난 거의 마음속으로는 그 친구랑 천년의 듀오가 되었다고 생각했다.
 
-나중에 가수가 되고싶다 이런 꿈을 가지기 보단, 당장 친구랑 행복하게 노래를 하는 삶이 좋았다.
+나중에 가수가 되고 싶다 이런 꿈을 가지기보단, 당장 친구랑 행복하게 노래하는 삶이 좋았다.
 
-하루는 학교 음악선생님께서 내 친구를 불러 근처의 남학교에서 뮤지컬을 하는데,
-여학생을 모집하고 있다며 뮤지컬 동아리에 들어가볼 것을 추천해주셔서 오디션을 보고 배역을 배정받았다.
+하루는 학교 음악 선생님께서 내 친구를 불러 근처의 남학교에서 뮤지컬을 하는데,
+여학생을 모집하고 있다며 뮤지컬 동아리에 들어가 볼 것을 추천해주셔서 오디션을 보고 배역을 배정받았다.
 실용음악과는 다른 세계였다. 특히 몸치인 나에게 춤은 참 힘들었고 열심히 한다고 잘하게 되는 것도 아니라는 쓴 교훈을 얻기도 했다.
-조금이라도 나아지기 위해서는 틈만나면 악보와 대본을 봤고, 앉아 있을 때도 탭댄스를 연습해야했다.
+조금이라도 나아지기 위해서는 틈만 나면 악보와 대본을 봤고, 앉아 있을 때도 탭댄스를 연습해야 했다.
 
-이때 처음으로 친구보다 나 스스로에게 집중해본 것 같다.
+이때 처음으로 친구보다 나 자신에게 집중해본 것 같다.
 좋았다. 친구가 없어도 온전히 집중하고 나아갈 수 있는 건 흥분되는 일이었다.
 
-뮤지컬을 핑계로, 학원은 그만두고 공부도 아예 접어 말 안듣는 사춘기 역할을 톡톡히 해냈다.
+뮤지컬을 핑계로, 학원은 그만두고 공부도 아예 접어 말 안 듣는 사춘기 역할을 톡톡히 해냈다.
 하지만, 뮤지컬 동아리에서만큼은 우등생이었다.
 
-어떻게 하면 더 호소력있게 말할 수 있을지, 표정을 만들수 있는지 고민하고 연습했었다. 잘하고 싶은 마음이 커질수록
-처음엔 거부감이 들었던 연기선생님의 지적도 누구보다 많이 들어서, 다 고쳐내고 제일 잘하는 사람이 되고 싶었다.
+어떻게 하면 더 호소력 있게 말할 수 있을지, 표정을 만들 수 있는지 고민하고 연습했었다. 잘하고 싶은 마음이 커질수록
+처음엔 거부감이 들었던 연기 선생님의 지적도 누구보다 많이 들어서, 다 고쳐내고 제일 잘하는 사람이 되고 싶었다.
 
 땀을 무지하게 흘리다 바닥에 기절해있으면
-친구들이 터덜터덜 컵밥을 사왔고 그걸 먹고 다시 연습했다.
+친구들이 터덜터덜 컵밥을 사 왔고 그걸 먹고 다시 연습했다.
 재밌었는데.
 나에게 뮤지컬은 처음으로 몰입한 행위, 첫사랑 같은 것이다.
 
 ---
 
-아쉽게도, 재능도 없었고 부모님께서도 조금 더 학업의 의무를 다하기를 바라셔서 고등학교를 가면서 뮤지컬의 꿈은 접게 되었다.
+아쉽게도, 재능도 없었고 부모님께서도 조금 더 학업의 의무를 다하기를 바라셔서 고등학교에 가면서 뮤지컬의 꿈은 접게 되었다.
 그리고 몰입을 경험하고 난 뒤로는 별로 반항하고 싶지도 않았다.
 내가 다시 또 몰입할 수 있는 것을 찾을 수 있을 것 같았다.
 그렇게, 가장 눈앞에 있는 가장 만만한 것인 학교 공부에 몰입하기를 도전했던 것 같다.
 
 지금까지 내가 좋아했던 것들은 전부 다 그랬다. 프로그래밍도 별반 다르지 않았다.
-내가 프로그래밍을 계속 해야겠다고 느꼈던 것은 그리 특별한 계기가 아니었다.
+내가 프로그래밍을 계속해야겠다고 느꼈던 것은 그리 특별한 계기가 아니었다.
 
-인생 최고 '노잼' 시기였던 스물 한 살의 여름.
-원격으로 학교 수업을 듣곤 했는데 책상에 앉기만하면 눕고싶고
+인생 최고 `재미없음` 시기였던 스물한 살의 여름.
+원격으로 학교 수업을 듣곤 했는데 책상에 앉기만 하면 눕고 싶고
 눕지 않고 강의를 듣는다 해도 대충 필기만 하고 머리에서 휘발시켰다.
 
 하루는 누워서 낮잠을 자다가 전화가 와서 받아보니
-친구가 해커톤에 나가자고 해서 잠이 덜 깬채로 그러자고 했다.
+친구가 해커톤에 나가자고 해서 잠이 덜 깬 채로 그러자고 했다.
 앞으로 무슨 폭풍이 일어날지도 모르고 그냥 다시 잤다.
 
 해커톤은 3일밖에 주어지지 않았고, 아무 경험도 없던 우리에게는 더 짧은 시간이었다.
-시간 내에 어떻게든 굴러가게 만들기 위해서는 날 혹사시켜야했지만 그럼에도 즐거웠던 것 같다.
+시간 내에 어떻게든 굴러가게 만들기 위해서는 날 혹사해야 했지만 그런데도 즐거웠던 것 같다.
 
 
 > 자기효능감
 > 
 > 주어진 과제나 일을 성공적으로 수행할 수 있다는 자신 의 능력에 대한 믿음
-> 
+>
 
-살면서 이 정도 자기효능감을 가지고 일에 임했던 적은 없었다.  
-비슷한 사람을 많이 봤는데, 나도 샤워하는 시간 밥먹는 시간을 쪼개 컴퓨터를 만지작 거렸다.
-이정도 책임감도 느껴본 적이 없었다. 별 생각 없이 받아들인 제안이었지만, 어느샌가 내가 팀을 이끌고 있었다.
+살면서 이 정도 자기효능감을 가지고 일에 임했던 적은 없었다.
+비슷한 사람을 많이 봤는데, 나도 샤워하는 시간 밥 먹는 시간을 쪼개 컴퓨터를 만지작거렸다.
+이정도 책임감도 느껴본 적이 없었다. 별생각 없이 받아들인 제안이었지만, 어느샌가 내가 팀을 이끌고 있었다.
 
 다시 몰입할 것을 찾았다는 흥분감과 안도감을 가장 최근 느낀 것이 이때였고,
 다가오지도 않은 미래에 설렘을 느꼈고, 그렇게 여기까지 왔다.
@@ -89,29 +89,29 @@
 
 솔직히 난 우테코 생활 중에도 몰입하지 못하는 때가 있었고
 그럴 때마다 난 한없이 작아졌다.
-그럴 땐 생각을 바꿔야한다.
+그럴 땐 생각을 바꿔야 한다.
 
 흘러가는 대로 살아가다가도,
 우연히 만나는 모든 것들에 몰입이라는 도전장을 내밀던 나였기에
 
-'나라면 다시금 몰입할 수 있을거야'
+`나라면 다시금 몰입할 수 있을 거야`
 
 믿어보는 것이다.
 
 ---
 
-많은 사람들이 몰입이 좋다는 사실에 고개를 끄덕이는 이유가
-몰입 이후의 결과물, 결과물이 주는 행복감을 떠올리기 때문이기도하다.
+많은 사람이 몰입이 좋다는 사실에 고개를 끄덕이는 이유가
+몰입 이후의 결과물, 결과물이 주는 행복감을 떠올리기 때문이기도 하다.
 하지만 모든 몰입이 다 성공적일 수 없고, 만족스러울 수도 없다.
-긍정적인 피드백을 받지못한 우리는 다시 몰입하기 힘들어질 수 있다.
+긍정적인 피드백을 받지 못한 우리는 다시 몰입하기 힘들어질 수 있다.
 
 또 다른 문제. 나는 성격상 그 어떤 것도 평생을 최선을 다해 몰입하기는 쉽지 않을 것 같다.
 그렇다면, 몰입이 어려워질 때 어떻게 극복해낼 것인가?
 
 난 내가 몰입할 수 있는 다른 것들을 만들어보려고 한다.
-취미와 운동은 이에대한 훌륭한 답이 되어줄 것이다.
+취미와 운동은 이에 대한 훌륭한 답이 되어줄 것이다.
 
-요즘, 프로그래밍에 몰입이 안되면 간단히 산책을 하고 돌아오는 길에
+요즘, 프로그래밍에 몰입이 안 되면 간단히 산책하고 돌아오는 길에
 엘리베이터가 아닌 계단을 오른다.
 계단을 오르는 나의 다리가, 그리고 다리의 근육이 어떻게 움직이는지 집중해본다.
 캠퍼스에 도착하면 다시 몰입할 수 있는 뇌로 바꿔치기한 것만 같다.
@@ -124,9 +124,9 @@
 몰입할 힘을 만들어준다.
 
 내가 공부에 지쳤을 때, 목적을 잃었을 때
-노래를 하고 연기를 하며 몰입할 수 있는 힘을 길렀다.
-더 커진 힘으로 마냥 새로운 것을 찾아나섰던 것이 아니다.
-내가 다시 마주하게 된, 내 앞의 놓인 '공부'에 다시 몰입해볼 수 있었다.
+노래하고 연기를 하며 몰입할 힘을 길렀다.
+더 커진 힘으로 마냥 새로운 것을 찾아 나섰던 것이 아니다.
+내가 다시 마주하게 된, 내 앞의 놓인 `공부`에 다시 몰입해볼 수 있었다.
 
 그러니 지금 당장 몰입이 어렵더라도
 한번 몰입해봤던 것, 내가 사랑했던 일들은
