--- a/이 코드 왜 이렇게 짰어요?.md
+++ b/이 코드 왜 이렇게 짰어요?.md
@@ -1,38 +1,62 @@
 # “이 코드 왜 이렇게 짰어요?”
 
-코드 리뷰 중 가장 많이 받지만, 언제나 대답하기 어려운 질문이다. 답변을 하기도 전부터 머리가 지끈지끈 아파온다.  
-“사실 별 생각 없이 짰는데, 뭐라고 대답해야 하지?” 고민은 제쳐두고 공식 문서, `Stack Overflow`, `ChatGPT`등 출처를 가리지 않고 그럴듯해 보이는 이유를 찾아 나섰다.  
-이러한 행동이 부질없다는 것을 깨닫는 데 오래 걸리지 않았다. 당연히 해야 할 고민인데도 불구하고, 어렵다는 핑계로 미루곤 했다.  
-내가 작성한 이유에 대한 고민 끝에 내린 답변들을 바탕으로 생긴 심경의 변화를 기록한다.
+코드 리뷰 중 가장 많이 받지만, 언제나 대답하기 어려운 질문이다. 답변하기도 전부터 머리가 지끈지끈 아파온다.
+
+“사실 별생각 없이 짰는데, 뭐라고 대답해야 하지?”
+
+직접 고민하는 과정은 제쳐두고, 구글링을 통해 그럴듯해 보이는 이유를 찾아 나섰다.  
+이러한 행동이 부질없다는 것을 깨닫는 데에는 오래 걸리지 않았다.  
+당연히 해야 할 고민인데도 불구하고, 어렵다는 핑계로 미루곤 했다.  
+위의 질문에 답변하기 위해 했던 고민을 정리해보려 한다.
 
 ---
 
-## 남이 아닌 '내' 생각을 전달하기
+## 내가 이렇게 짠 이유 설명하기
 
-코드를 작성하다가 막히는 순간이 오면, 구글링을 하거나 / 유명 개발자의 코드를 복붙하거나 / GPT에게 위임하는 방식으로 문제를 해결했다.  
-직면한 문제를 해결한다는 측면에서는 효율적인 방법들이지만 코드 리뷰 과정에서 문제가 발생한다. 작성한 이유에 대해 묻는 순간, 머리가 하얘진다.  
-그럴듯한 이유를 찾아 또 한 차례 검색에 나선다. 남의 코드에 출처 미상의 근거를 끼워 맞추고 있는 내 모습에 자괴감이 들었다.
+### - 작성한 이유에 대해 충분히 고민하고 답변하기
 
-이도저도 아닌 답변 대신, 고민을 거친 후 내 생각을 충분히 담을 수 있는 답변을 하려 노력했다.
+이도 저도 아닌 답변 대신, 내가 왜 이렇게 작성했는지 돌아보고 답변하려 노력했다.
 
----
+`리뷰어)` 화면에 지구당 식당을 보여준다. 는 어떨까요?  
+저는 테스트에 쓰일 말은 도메인 지식이 없는 누군가가 봤을 때도 이해가 가야 한다고 생각하는 입장인데, 유스의 의견도 궁금합니다!
 
-`리뷰어)` 화면에 지구당 식당을 보여준다. 는 어떨까요?
-저는 테스트에 쓰일 말은 도메인 지식이 없는 누군가가 봤을때도 이해가 가야한다고 생각하는 입장인데, 유스의 의견도 궁금합니다!
-
-`나)` 테스트 케이스만 확인해도 어떤 테스트인지 확실히 이해가 될 수 있다는 점에서는 좋은 것 같아요!  
+`나)` 테스트 케이스만 확인해도 어떤 테스트인지 확실히 이해될 수 있다는 점에서는 좋은 것 같아요!  
 하지만 컴포넌트 렌더링을 테스트한다는 관점에서 봤을 때는 지금의 테스트 케이스도 괜찮다고 생각해요.  
-저는 이후에 E2E 테스트를 작성할 때, 지구당 식당을 입력하고 등록한다. -> 화면에 지구당 식당을 보여준다.와 같은 경우에 사용할 것 같습니다. 어떻게 생각하시나요?
+저는 이후에 E2E 테스트를 작성할 때, 지구당 식당을 입력하고 등록한다. -> 화면에 지구당 식당을 보여준다.와 같은 경우에 사용할 것 같습니다.  
+어떻게 생각하시나요?
 
 `리뷰어)` 유스 의견도 좋은 것 같아요~! 👍
+
+### - 새로운 기술
+
+새로운 기술을 학습하여 적용하는 경우, 어떤 문제를 해결하기 위해 사용했는지에 초점을 맞추어 고민했다.
+
+`리뷰어)` 페이지 내의 카드 등록 폼이 있는 페이지에 `BottomSheet`를 추가하는 방법도 있었을 것 같은데, `props` 대신에 `Context`를 사용하신 이유도 궁금합니당~!
+
+`나)` 카드 등록 폼이 비대해서, BottomSheet를 페이지에서 렌더링하도록 했습니다.  
+페이지에서 카드사 정보를 위한 별도의 상태와 update 함수를 생성하고, `props`로 전달하기보단 각각 필요한 컴포넌트에서  
+`Context`를 통해 받아와서 사용하는 것이 추적하기 쉽지 않을까? 라는 판단하에 사용했습니다.  
+다소 과한 대처라는 생각도 드는데, 카드 등록 폼에 `BottomSheet`를 옮기고 `Context`를 제거하는 것이 더 나을지 궁금합니다!
+
+`리뷰어)` 정답은 없고, 그냥 왜 `Context`를 사용했는지가 궁금했어요~! 유스가 주신 답변으로 충분한 것 같습니다
 
 ---
 
 ## 비판적으로 수용하기
 
-비판적 수용은 건설적인 토론의 기점이 될 수 있다.
+### - 의심하는 과정 거치기
 
----
+코드를 작성하다가 막히는 순간이 오면, 구글링을 하거나 / 유명 개발자의 코드를 복붙하거나 / GPT에게 위임하는 방식으로 문제를 해결했다.  
+직면한 문제를 해결한다는 측면에서는 효율적인 방법들이지만, 코드 리뷰 과정에서 문제가 발생한다. 작성한 이유에 대해 묻는 순간 머리가 하얘진다.  
+그럴듯한 이유를 찾아 또 한 차례 검색에 나선다. 남의 코드에 출처 미상의 근거를 끼워 맞추고 있는 내 모습에 자괴감이 들었다.
+
+앞서 말한 해결책들(구글링, 유명 개발자의 코드, GPT)을 포기하는 것은 현실적으로 쉽지 않다. 대신 받아들이기에 앞서 의심하는 과정을 거치기로 했다.  
+내가 해결하고자 하는 문제에 적합한 해결 방안인지, 개선할 수 있는 부분이 있는지, GPT가 동문서답을 하고 있지는 않은지.  
+별 생각 없이 복사 + 붙여넣기하지 않고, 하나하나 의심해보고 합당한 근거를 이끌어낸 후 적용하도록 사고의 흐름을 바꾸었다.
+
+### - 건설적인 대화
+
+비판적 수용은 건설적인 대화의 기점이 될 수 있다.
 
 `리뷰어)` 여기 사용처에서 메뉴얼하게 `random number`를 넣어주는 게 좋은 방법인지 고민입니다~  
 앞으로 갈지 말지 결정하는 건 `Car`가 알아서 하고(즉, `car`의 `Progress` 정책은 `car`만 알고있고) 여기서는 고상하게 `car`! `progress`해!!  
@@ -51,25 +75,24 @@
 `car` 객체를 완전히 분리하고 테스트가 용이하게 하시려는 목적이라면 전진여부를 '판단'하는 로직을 아예 `racingGame`으로 옮기고  
 `car`는 전진할지 말지만 `boolean`으로 받아 처리하도록 해도 좋을 것 같습니다.
 
----
-
+피드백을 수용하기 이전에 내가 생각한 문제점과, 코드를 작성한 이유에 대해 설명하는 과정을 거쳤다.  
+내 의견을 듣고 난 이후 리뷰어가 제시한 문제점들 또한 모두 합당했다.  
 대화를 나눈 이후 리뷰어에게 설득당한 나는 더 나은 해결책을 찾아 나섰다.  
 좀 더 조사해 보니 서로가 제시한 문제점 모두를 해결할 수 있는 방안이 존재했다.
-
----
 
 `리뷰어)` 기본값 매개변수를 통해 테스트에 용이하도록 만든 아이디어는 괜찮아 보입니다😁  
 덕분에 random 값의 `min`, `max`와 `conditionNumber`의 기준값을 한 곳에서 정의할 수 있어 더 좋아보이네요!
 
----
+만약 내 의견을 제시하는 과정 없이 리뷰어의 피드백을 맹목적으로 수용했다면, 생각지 못했던 문제점들을 발견하지 못하고 지나갔을 것이다.  
+또한 더 나은 해결 방법에 대해 고민하는 과정 또한 없었을 것이다.
 
-만약 리뷰어의 피드백을 맹목적으로 수용했다면, 더 나은 해결책을 찾을 수 있었을까?
-
-### 리뷰어한테 받은 피드백인데~
+### - "리뷰어한테 받은 피드백인데~"
 
 페어 프로그래밍 도중 의견 제시를 할 때 종종 사용했던 표현이다.  
-경계해야 한다는 것을 속으로는 알고 있지만, 이 표현이 갖는 설득력으로 인해 무의식적으로 사용했다.  
-물론 리뷰어의 피드백이 내 의견보다 합리적일 수 있고, 그럴 확률이 높다.  
+경계해야 한다는 것을 속으로는 알고 있지만, 이 표현이 갖는 설득력으로 인해 무의식적으로 사용했다.
+
+물론 리뷰어의 피드백이 내 의견보다 합리적일 수 있고, 그럴 확률이 높다.
+
 하지만, 문득 이런 생각이 들었다. 리뷰어의 피드백을 맹목적으로 수용하고, 위와 같은 표현으로 페어를 설득한다면 ‘내’가 짠 코드는 남아 있을까?  
 고민 끝에 설득의 수단으로 위 표현을 사용하는 것은 지양하기로 했다.
 
@@ -77,5 +100,7 @@
 
 ## 앞으로
 
-꽤나 많은 질문에 답변하고, 설득하며 설득당했다. 내가 코드를 왜 이렇게 짰는지 설명하는 건 아직도 어렵다.  
-내 코드의 작성 이유에 대해 심도있게 고민하고, 작성 기준을 하나하나 정립해 나가려 한다.
+꽤 많은 질문에 답변하고, 설득하며 설득당했다. 내가 코드를 왜 이렇게 짰는지 설명하는 건 아직도 어렵다.  
+고민하는 과정은 고통스럽지만, 이유를 설명하며 양질의 피드백을 주고받을 수 있었다.  
+뿐만 아니라 '이런 문제 상황에선 이렇게 코드를 작성해야겠다.' 와 같이 기준을 하나하나 정립해 나갈 수 있었다.  
+"이 코드 왜 이렇게 짰어요?"라는 질문에 자신 있게 대답할 수 있는 내가 될 수 있도록 꾸준히 고민해 보려 한다.
