feat: 레벨 2 글쓰기 미션 감사 인사 추가

--- a/레벨 2 글쓰기/꿈에 대한 고찰 일기.md
+++ b/레벨 2 글쓰기/꿈에 대한 고찰 일기.md
@@ -37,15 +37,14 @@
 <br>
 
 ### 2022.09.21 (⛅️) 다른 이들은 어떤가?
-> 익명성을 보장하기 위해 비슷한 의견들은 섞고 각색해보았습니다.
+> 익명성을 보장하기 위해 비슷한 의견들은 섞고 각색해보았습니다.   
+> 갑작스런 인터뷰에 응해준 크루분들 감사합니다 🙇‍♀️
 >
 > <br>
 > 
-> **[ 안건 ]**
-> 
-> **무엇을 위해 오늘을 열심히 살기 위해 노력하시나요?**
-> 
-> → **무엇이 당신을 즐겁게 해주나요?**
+> **[ 안건 ]**   
+> **무엇을 위해 오늘을 열심히 살기 위해 노력하시나요?**   
+> **혹은 무엇이 당신을 즐겁게 해주나요?**
 
 <br>
 
