--- a/어떤 개발자와 같이 일하고 싶나요?.md
+++ b/어떤 개발자와 같이 일하고 싶나요?.md
@@ -58,10 +58,13 @@
 ### 다른 직업을 무시하지 않는 개발자
 생각도 못했는데 이런 사람이 많다고 한다. 쉬워보이는데 왜 못 하지? 별 거 아닌 거 같은데. 이런 생각을 가지고 있으면 의사소통하기도 힘들어질 것 같다. 그리고 이 부분은 '인성이 나쁘지 않은 개발자'의 반대에도 속한다고 생각한다. 
 
-비단 개발자에 한에서만이 아니라, 같이 일하고 싶은 동료도 되는 것 같다. 
 
 <br>
 
-개인적으로 같이 일하고 싶은 개발자는 '**일할 때 편한 개발자가 같이 일하고 싶은 개발자**'라고 생각한다. 우아한테크코스에서 스토리북에 대해서 알게 됐는데, 이 스토리북이 협업에 많은 도움을 줄 것 같다는 생각이 들었다. 그래서 스토리북을 잘하고 싶다는 욕심이 생겼다. 잘 이용하게 되면 디자이너 등 비개발자들과 편하게 의사소통하며 일할 수 있을 것 같다. 
+위 사항들은 비단 개발자에 한에서만이 아니라, 같이 일하고 싶은 동료도 되는 것 같다. 
+
+<br>
+
+개인적으로 같이 일하고 싶은 개발자는 '**일할 때 편한 개발자가 같이 일하고 싶은 개발자**'라고 생각한다. 우아한테크코스를 하면서 스토리북에 대해 알게 됐는데, 이 스토리북이 협업에 많은 도움을 줄 것 같다는 생각이 들었다. 그래서 스토리북을 잘하고 싶다는 욕심이 생겼다. 잘 이용하게 되면 디자이너 등 비개발자들과 편하게 의사소통하며 일할 수 있을 것 같다. 
 
 같이 일하고 싶은 개발자가 되기 위해 현재 부족한 점은 무엇인지 알아보고 개선해나가야 겠다.
